1582758447 | 63 files | M bin/version.txt,  M drivers/indexcontroller/resources/rendermodels/valve_controller_knu_1_0_left/valve_controller_knu_1_0_left.json,  M drivers/indexcontroller/resources/rendermodels/valve_controller_knu_1_0_right/valve_controller_knu_1_0_right.json,  M drivers/indexcontroller/resources/rendermodels/valve_controller_knu_ev2_0_left/valve_controller_knu_ev2_0_left.json,  M drivers/indexcontroller/resources/rendermodels/valve_controller_knu_ev2_0_right/valve_controller_knu_ev2_0_right.json,  M drivers/lighthouse/resources/webinterface/pairing.html,  M resources/webinterface/dashboard/bindingcallouts.html,  M resources/webinterface/dashboard/controllerbinding.html,  M resources/webinterface/dashboard/debugcommands.html,  M resources/webinterface/dashboard/fallback.html,  M resources/webinterface/dashboard/keyboard.html,  M resources/webinterface/dashboard/localization/bindingui_czech.json,  M resources/webinterface/dashboard/localization/bindingui_danish.json,  M resources/webinterface/dashboard/localization/bi
https://steamdb.info/patchnotes/4719782/

--- a/resources/webinterface/dashboard/localization/bindingui_dutch.json
+++ b/resources/webinterface/dashboard/localization/bindingui_dutch.json
@@ -18,7 +18,7 @@
   "SourceInputMode_Force_Sensor": "Druksensor",
   "SourceInputMode_trigger": "Trekker",
   "SourceInputMode_Click": "Klikken",
-  "SourceInputMode_TriggerClick": "Click",
+  "SourceInputMode_TriggerClick": "Klikken",
   "SourceInputMode_Touch": "Aanraken",
   "SourceInputMode_Held": "Vastgehouden",
   "SourceInputMode_Single": "Enkel",
@@ -30,7 +30,7 @@
   "SourceInputMode_West": "West",
   "SourceInputMode_Center": "Midden",
   "SourceInputMode_Scroll": "Scrollen",
-  "SourceInputMode_Trackpad_Scroll": "Scroll",
+  "SourceInputMode_Trackpad_Scroll": "Scrollen",
   "SourceInputMode_Position": "Positie",
   "SourceInputMode_Pull": "Trekken",
   "SourceInputMode_Force": "Drukken",
@@ -50,6 +50,8 @@
   "SourceInputMode_TouchInitialState": "Aanraakactie aanvankelijk vastgehouden:",
   "SourceInputMode_OverlapPercent": "Overlappingspercentage:",
   "SourceInputMode_DeadzonePercent": "Percentage dode zone:",
+  "SourceInputMode_Maxzone": "Max zone Percentage:",
+  "SourceInputMode_Exponent": "Curve Exponent:",
   "SourceInputMode_StickyDpad": "Vierpuntsdruktoetsactie aanhouden bij activering",
   "SourceInputMode_LongPressDelay": "Vertraging lang indrukken:",
   "SourceInputMode_DoublePressDelay": "Vertraging dubbel indrukken:",
@@ -92,11 +94,12 @@
   "SourceInputMode_LongPressDelay_tooltip": "The amount of time the button must be down before the long click is engaged.",
   "SourceInputMode_DoublePressDelay_tooltip": "The maximum amount of time between the end of the first click and the start of the second.",
   "SourceInputMode_DeadZone_tooltip": "The percentage from the center that the zones will need to pass to trigger.",
-  "SourceInputMode_InvertYAxis_tooltip": "(ex. a value of -0.75 would become 0.75)",
-  "SourceInputMode_InvertXAxis_tooltip": "(ex. a value of -0.75 would become 0.75)",
+  "SourceInputMode_InvertYAxis_tooltip": "(voorbeeld: een waarde van -0,75 wordt 0,75)",
+  "SourceInputMode_InvertXAxis_tooltip": "(voorbeeld: een waarde van -0,75 wordt 0,75)",
   "SourceInputMode_StickyClick_tooltip": "Keep thumbstick clicked while stick is deflected",
   "SourceInputMode_StickyClick_Activate_tooltip": "How much you have to deflect the stick to engage.",
   "SourceInputMode_StickyClick_Deactivate_tooltip": "How much you have to relax the stick for it to disengage.",
+  "SourceInputMode_TouchyClick_tooltip": "Keep button clicked as long as it's touched",
   "SourceInputMode_ButtonModeInputForce_Click_tooltip": "Optionally get the value for this from the force sensor (how much pressure is applied) or the capacitive sensor (how close a finger is).",
   "SourceInputMode_CapsenseEnableThreshold_tooltip": "At what point to enable the grab due to a finger being close to the grip.",
   "SourceInputMode_GrabThreshold_tooltip": "The combined activation thresholds for the capacitive sensor and the force sensor.",
@@ -204,6 +207,7 @@
   "SourceInputMode_StickyClick": "Analoge stick ingedrukt houden terwijl je hem in een richting beweegt",
   "SourceInputMode_StickyClick_Activate": "Drempel waarbij een richting wordt geactiveerd",
   "SourceInputMode_StickyClick_Deactivate": "Drempel waarbij een richting wordt gedeactiveerd",
+  "SourceInputMode_TouchyClick": "Keep button clicked as long as it's touched",
   "SourceInputMode_ButtonModeInputForce_Click": "Klik genereren van:",
   "SourceInputMode_Grab": "Pakken",
   "SourceInputMode_CapsenseEnableThreshold": "Drempel CapSense aan:",
