--- a/resources/webinterface/dashboard/localization/bindingui_spanish.json
+++ b/resources/webinterface/dashboard/localization/bindingui_spanish.json
@@ -18,7 +18,7 @@
   "SourceInputMode_Force_Sensor": "Sensor de fuerza",
   "SourceInputMode_trigger": "Gatillo",
   "SourceInputMode_Click": "Clic",
-  "SourceInputMode_TriggerClick": "Click",
+  "SourceInputMode_TriggerClick": "Clic",
   "SourceInputMode_Touch": "Toque",
   "SourceInputMode_Held": "Retenido",
   "SourceInputMode_Single": "Único",
@@ -30,7 +30,7 @@
   "SourceInputMode_West": "Oeste",
   "SourceInputMode_Center": "Centro",
   "SourceInputMode_Scroll": "Desplazamiento",
-  "SourceInputMode_Trackpad_Scroll": "Scroll",
+  "SourceInputMode_Trackpad_Scroll": "Desplazamiento",
   "SourceInputMode_Position": "Posición",
   "SourceInputMode_Pull": "Tirar de",
   "SourceInputMode_Force": "Fuerza",
@@ -50,6 +50,8 @@
   "SourceInputMode_TouchInitialState": "Tocar en acción retenida:",
   "SourceInputMode_OverlapPercent": "Porcentaje de superposición:",
   "SourceInputMode_DeadzonePercent": "Porcentaje de zona muerta:",
+  "SourceInputMode_Maxzone": "Porcentaje de zona máxima:",
+  "SourceInputMode_Exponent": "Exponente de la curva:",
   "SourceInputMode_StickyDpad": "Continuar la acción del Dpad una vez activada",
   "SourceInputMode_LongPressDelay": "Retardo de pulsación larga:",
   "SourceInputMode_DoublePressDelay": "Retardo de pulsación doble:",
@@ -97,6 +99,7 @@
   "SourceInputMode_StickyClick_tooltip": "Keep thumbstick clicked while stick is deflected",
   "SourceInputMode_StickyClick_Activate_tooltip": "How much you have to deflect the stick to engage.",
   "SourceInputMode_StickyClick_Deactivate_tooltip": "How much you have to relax the stick for it to disengage.",
+  "SourceInputMode_TouchyClick_tooltip": "Mantener el botón pulsado mientras se esté tocando",
   "SourceInputMode_ButtonModeInputForce_Click_tooltip": "Optionally get the value for this from the force sensor (how much pressure is applied) or the capacitive sensor (how close a finger is).",
   "SourceInputMode_CapsenseEnableThreshold_tooltip": "At what point to enable the grab due to a finger being close to the grip.",
   "SourceInputMode_GrabThreshold_tooltip": "The combined activation thresholds for the capacitive sensor and the force sensor.",
@@ -204,6 +207,7 @@
   "SourceInputMode_StickyClick": "Mantén el clic del stick analógico mientras este siga desviado",
   "SourceInputMode_StickyClick_Activate": "Umbral de activación de la desviación",
   "SourceInputMode_StickyClick_Deactivate": "Umbral de desactivación de la desviación",
+  "SourceInputMode_TouchyClick": "Mantener el botón pulsado mientras se esté tocando",
   "SourceInputMode_ButtonModeInputForce_Click": "Generar clic desde:",
   "SourceInputMode_Grab": "Agarrar",
   "SourceInputMode_CapsenseEnableThreshold": "Umbral de activación de detección capacitiva:",
