--- a/resources/webinterface/dashboard/localization/dashboard_czech.json
+++ b/resources/webinterface/dashboard/localization/dashboard_czech.json
@@ -1,46 +1,48 @@
 {
-  "UI_Unknown": "Unknown",
-  "Now_Starting": "Next Up",
-  "Now_Starting_HomeApp": "Going Home To",
-  "Now_Playing": "Now Playing",
-  "Now_Playing_HomeApp": "Home",
-  "Now_Quitting": "Now Exiting",
-  "Now_Waiting": "Waiting...",
-  "BackToApp": "Back to App",
-  "Toggle_Room_View": "Toggle Room View",
-  "GoHome": "Go Home",
-  "QuitApp": "Quit App",
-  "DashboardPower_Header": "System",
-  "BindingCallout_Header": "Show Controls",
+  "UI_Unknown": "Neznámý",
+  "Now_Starting": "Další na řadě",
+  "Now_Starting_HomeApp": "Návrat domů k:",
+  "Now_Playing": "Je spuštěno:",
+  "Now_Playing_HomeApp": "Domů",
+  "Now_Quitting": "Je ukončováno:",
+  "Now_Waiting": "Čekání...",
+  "BackToApp": "Zpět do aplikace",
+  "Toggle_Room_View": "Pohled ven",
+  "GoHome": "Přejít domů",
+  "QuitApp": "Ukončit aplikaci",
+  "DashboardPower_Header": "Systém",
+  "BindingCallout_Header": "Nápověda ovládání",
   "MutedLabel": "Umlčen",
-  "SteamVR_Home": "SteamVR Home",
-  "Exit_SteamVR_Home": "Exit SteamVR Home",
-  "Exit_Game": "Exit Game",
-  "Menu": "Menu",
-  "Desktops": "Desktops",
-  "Volume": "Volume",
-  "X_More_Overlays": "%1$s More Overlays",
-  "Store": "Store",
-  "BrowseAllGames": "Browse All Games",
-  "BrowseAll": "Browse All",
-  "StoreSection_TopSingleplayer": "Top Singleplayer",
-  "StoreSection_TopMultiplayer": "Top Multiplayer",
-  "StoreSection_TopFree": "Top Free",
-  "Library": "Library",
-  "RecentlyPlayed": "Recently Played",
-  "Return_To_Game": "Return to Game",
-  "Return_To_Home": "Return to Home",
-  "Controller_Bindings": "Controller Bindings",
-  "App_Video_Settings": "Video Settings",
-  "Desktop": "Desktop",
-  "Desktop_X": "Desktop %1$s",
-  "ShowKeyboardLabel": "Keyboard",
-  "ShowKeyboardTooltip": "Show Keyboard",
-  "Size": "Size",
-  "Mute": "Mute",
-  "Unmute": "Unmute",
-  "WelcomeHeader": "No Games?",
-  "WelcomeMessage": "Building a VR library that comes with you as your hardware changes has never been easier.",
-  "WelcomeBrowseStore": "Browse the Store",
-  "WelcomeInstall": "Install Games"
+  "SteamVR_Home": "Virtuální domov",
+  "Exit_SteamVR_Home": "Odejít z virtuálního domova",
+  "Exit_Game": "Ukončit hru",
+  "Menu": "Nabídka",
+  "Desktops": "Plochy",
+  "Volume": "Hlasitost",
+  "X_More_Overlays": "Další překrytí (%1$s)",
+  "Store": "Obchod",
+  "BrowseAllGames": "Procházet všechny hry",
+  "BrowseAll": "Procházet vše",
+  "StoreSection_TopSingleplayer": "Nejlepší pro jednoho hráče",
+  "StoreSection_TopMultiplayer": "Nejlepší pro více hráčů",
+  "StoreSection_TopFree": "Nejlepší bezplatné",
+  "Library": "Knihovna",
+  "RecentlyPlayed": "Nedávno hrané",
+  "Return_To_Game": "Zpět do hry",
+  "Return_To_Home": "Zpět domů",
+  "Controller_Bindings": "Nastavení ovladače",
+  "App_Video_Settings": "Nastavení obrazu",
+  "Desktop": "Plocha",
+  "Desktop_X": "Plocha %1$s",
+  "ShowKeyboardLabel": "Klávesnice",
+  "ShowKeyboardTooltip": "Zobrazit klávesnici",
+  "HideKeyboardTooltip": "Skrýt klávesnici",
+  "Size": "Velikost",
+  "Mute": "Umlčet",
+  "Unmute": "Zrušit umlčení",
+  "WelcomeHeader": "Nemáte žádné hry?",
+  "WelcomeMessage": "Začněte plnit svoji VR knihovnu, která Vám zůstane dostupná i po přechodu na jiný hardware.",
+  "WelcomeBrowseStore": "Procházet obchod",
+  "WelcomeInstall": "Nainstalovat hry",
+  "Play": "Hrát"
 }
