--- a/resources/webinterface/dashboard/localization/dashboard_danish.json
+++ b/resources/webinterface/dashboard/localization/dashboard_danish.json
@@ -1,46 +1,48 @@
 {
-  "UI_Unknown": "Unknown",
-  "Now_Starting": "Next Up",
-  "Now_Starting_HomeApp": "Going Home To",
-  "Now_Playing": "Now Playing",
-  "Now_Playing_HomeApp": "Home",
-  "Now_Quitting": "Now Exiting",
-  "Now_Waiting": "Waiting...",
-  "BackToApp": "Back to App",
-  "Toggle_Room_View": "Toggle Room View",
-  "GoHome": "Go Home",
-  "QuitApp": "Quit App",
+  "UI_Unknown": "Ukendt",
+  "Now_Starting": "Næste",
+  "Now_Starting_HomeApp": "Går tilbage til",
+  "Now_Playing": "Spiller nu",
+  "Now_Playing_HomeApp": "Startside",
+  "Now_Quitting": "Afslutter nu",
+  "Now_Waiting": "Venter...",
+  "BackToApp": "Tilbage til appen",
+  "Toggle_Room_View": "Slå rumvisning fra/til",
+  "GoHome": "Gå til startside",
+  "QuitApp": "Afslut app",
   "DashboardPower_Header": "System",
-  "BindingCallout_Header": "Show Controls",
+  "BindingCallout_Header": "Vis styringer",
   "MutedLabel": "Dæmpet",
   "SteamVR_Home": "SteamVR Home",
-  "Exit_SteamVR_Home": "Exit SteamVR Home",
-  "Exit_Game": "Exit Game",
+  "Exit_SteamVR_Home": "Afslut SteamVR Home",
+  "Exit_Game": "Afslut spil",
   "Menu": "Menu",
-  "Desktops": "Desktops",
-  "Volume": "Volume",
-  "X_More_Overlays": "%1$s More Overlays",
-  "Store": "Store",
-  "BrowseAllGames": "Browse All Games",
-  "BrowseAll": "Browse All",
-  "StoreSection_TopSingleplayer": "Top Singleplayer",
-  "StoreSection_TopMultiplayer": "Top Multiplayer",
-  "StoreSection_TopFree": "Top Free",
-  "Library": "Library",
-  "RecentlyPlayed": "Recently Played",
-  "Return_To_Game": "Return to Game",
-  "Return_To_Home": "Return to Home",
-  "Controller_Bindings": "Controller Bindings",
-  "App_Video_Settings": "Video Settings",
-  "Desktop": "Desktop",
-  "Desktop_X": "Desktop %1$s",
-  "ShowKeyboardLabel": "Keyboard",
-  "ShowKeyboardTooltip": "Show Keyboard",
-  "Size": "Size",
-  "Mute": "Mute",
-  "Unmute": "Unmute",
-  "WelcomeHeader": "No Games?",
-  "WelcomeMessage": "Building a VR library that comes with you as your hardware changes has never been easier.",
-  "WelcomeBrowseStore": "Browse the Store",
-  "WelcomeInstall": "Install Games"
+  "Desktops": "Stationære computere",
+  "Volume": "Lydstyrke",
+  "X_More_Overlays": "%1$s overlays til",
+  "Store": "Butik",
+  "BrowseAllGames": "Gennemse alle spil",
+  "BrowseAll": "Gennemse alle",
+  "StoreSection_TopSingleplayer": "Bedste singleplayer-spil",
+  "StoreSection_TopMultiplayer": "Bedste multiplayer-spil",
+  "StoreSection_TopFree": "Bedste gratis spil",
+  "Library": "Bibliotek",
+  "RecentlyPlayed": "Spillet for nyligt",
+  "Return_To_Game": "Tilbage til spillet",
+  "Return_To_Home": "Tilbage til startside",
+  "Controller_Bindings": "Controller-bindinger",
+  "App_Video_Settings": "Videoindstillinger",
+  "Desktop": "Stationær computer",
+  "Desktop_X": "Stationære computer %1$s",
+  "ShowKeyboardLabel": "Tastatur",
+  "ShowKeyboardTooltip": "Vis tastatur",
+  "HideKeyboardTooltip": "Skjul tastatur",
+  "Size": "Størrelse",
+  "Mute": "Dæmp",
+  "Unmute": "Fjern dæmpning",
+  "WelcomeHeader": "Ingen spil?",
+  "WelcomeMessage": "Det har aldrig været nemmere at bygge et VR-bibliotek, som kan følge med dine hardwareændringer.",
+  "WelcomeBrowseStore": "Gennemse butikken",
+  "WelcomeInstall": "Installer spil",
+  "Play": "Spil"
 }
