--- a/resources/webinterface/dashboard/localization/dashboard_italian.json
+++ b/resources/webinterface/dashboard/localization/dashboard_italian.json
@@ -1,46 +1,48 @@
 {
-  "UI_Unknown": "Unknown",
-  "Now_Starting": "Next Up",
-  "Now_Starting_HomeApp": "Going Home To",
-  "Now_Playing": "Now Playing",
-  "Now_Playing_HomeApp": "Home",
-  "Now_Quitting": "Now Exiting",
-  "Now_Waiting": "Waiting...",
-  "BackToApp": "Back to App",
-  "Toggle_Room_View": "Toggle Room View",
-  "GoHome": "Go Home",
-  "QuitApp": "Quit App",
-  "DashboardPower_Header": "System",
-  "BindingCallout_Header": "Show Controls",
+  "UI_Unknown": "Sconosciuto",
+  "Now_Starting": "Prossimo",
+  "Now_Starting_HomeApp": "Torna all'inizio",
+  "Now_Playing": "In esecuzione",
+  "Now_Playing_HomeApp": "Pagina iniziale",
+  "Now_Quitting": "Uscita in corso",
+  "Now_Waiting": "In attesa...",
+  "BackToApp": "Torna all'app",
+  "Toggle_Room_View": "Attiva/disattiva Vista stanza",
+  "GoHome": "Torna all'inizio",
+  "QuitApp": "Esci dall'applicazione",
+  "DashboardPower_Header": "Sistema",
+  "BindingCallout_Header": "Mostra controlli",
   "MutedLabel": "Silenziato",
   "SteamVR_Home": "SteamVR Home",
-  "Exit_SteamVR_Home": "Exit SteamVR Home",
-  "Exit_Game": "Exit Game",
+  "Exit_SteamVR_Home": "Esci da SteamVR Home",
+  "Exit_Game": "Esci dal gioco",
   "Menu": "Menu",
-  "Desktops": "Desktops",
+  "Desktops": "Desktop",
   "Volume": "Volume",
-  "X_More_Overlays": "%1$s More Overlays",
-  "Store": "Store",
-  "BrowseAllGames": "Browse All Games",
-  "BrowseAll": "Browse All",
-  "StoreSection_TopSingleplayer": "Top Singleplayer",
-  "StoreSection_TopMultiplayer": "Top Multiplayer",
-  "StoreSection_TopFree": "Top Free",
-  "Library": "Library",
-  "RecentlyPlayed": "Recently Played",
-  "Return_To_Game": "Return to Game",
-  "Return_To_Home": "Return to Home",
-  "Controller_Bindings": "Controller Bindings",
-  "App_Video_Settings": "Video Settings",
+  "X_More_Overlays": "Altri %1$s overlay",
+  "Store": "Negozio",
+  "BrowseAllGames": "Sfoglia tutti i giochi",
+  "BrowseAll": "Sfoglia tutto",
+  "StoreSection_TopSingleplayer": "Migliori a giocatore singolo",
+  "StoreSection_TopMultiplayer": "Migliori multigiocatore",
+  "StoreSection_TopFree": "Migliori titoli gratuiti",
+  "Library": "Libreria",
+  "RecentlyPlayed": "Giocati di recente",
+  "Return_To_Game": "Torna al gioco",
+  "Return_To_Home": "Torna alla pagina iniziale",
+  "Controller_Bindings": "Assegnazioni del controller",
+  "App_Video_Settings": "Impostazioni video",
   "Desktop": "Desktop",
   "Desktop_X": "Desktop %1$s",
-  "ShowKeyboardLabel": "Keyboard",
-  "ShowKeyboardTooltip": "Show Keyboard",
-  "Size": "Size",
-  "Mute": "Mute",
-  "Unmute": "Unmute",
-  "WelcomeHeader": "No Games?",
-  "WelcomeMessage": "Building a VR library that comes with you as your hardware changes has never been easier.",
-  "WelcomeBrowseStore": "Browse the Store",
-  "WelcomeInstall": "Install Games"
+  "ShowKeyboardLabel": "Tastiera",
+  "ShowKeyboardTooltip": "Mostra la tastiera",
+  "HideKeyboardTooltip": "Nascondi tastiera",
+  "Size": "Dimensioni",
+  "Mute": "Silenzia",
+  "Unmute": "Attiva voce",
+  "WelcomeHeader": "Nessun gioco?",
+  "WelcomeMessage": "Costruire una libreria VR che ti segue anche quando cambi hardware non è mai stato così facile.",
+  "WelcomeBrowseStore": "Sfoglia il Negozio",
+  "WelcomeInstall": "Installa giochi",
+  "Play": "Avvio"
 }
