--- a/resources/webinterface/dashboard/localization/dashboard_norwegian.json
+++ b/resources/webinterface/dashboard/localization/dashboard_norwegian.json
@@ -1,46 +1,48 @@
 {
-  "UI_Unknown": "Unknown",
-  "Now_Starting": "Next Up",
-  "Now_Starting_HomeApp": "Going Home To",
-  "Now_Playing": "Now Playing",
-  "Now_Playing_HomeApp": "Home",
-  "Now_Quitting": "Now Exiting",
-  "Now_Waiting": "Waiting...",
-  "BackToApp": "Back to App",
-  "Toggle_Room_View": "Toggle Room View",
-  "GoHome": "Go Home",
-  "QuitApp": "Quit App",
+  "UI_Unknown": "Ukjent",
+  "Now_Starting": "Neste",
+  "Now_Starting_HomeApp": "Går hjem til",
+  "Now_Playing": "Spiller nå",
+  "Now_Playing_HomeApp": "Hjem",
+  "Now_Quitting": "Avslutter nå",
+  "Now_Waiting": "Venter...",
+  "BackToApp": "Tilbake til program",
+  "Toggle_Room_View": "Veksle romvisning",
+  "GoHome": "Gå hjem",
+  "QuitApp": "Avslutt program",
   "DashboardPower_Header": "System",
-  "BindingCallout_Header": "Show Controls",
+  "BindingCallout_Header": "Vis kontroller",
   "MutedLabel": "Dempet",
   "SteamVR_Home": "SteamVR Home",
-  "Exit_SteamVR_Home": "Exit SteamVR Home",
-  "Exit_Game": "Exit Game",
-  "Menu": "Menu",
-  "Desktops": "Desktops",
-  "Volume": "Volume",
-  "X_More_Overlays": "%1$s More Overlays",
-  "Store": "Store",
-  "BrowseAllGames": "Browse All Games",
-  "BrowseAll": "Browse All",
-  "StoreSection_TopSingleplayer": "Top Singleplayer",
-  "StoreSection_TopMultiplayer": "Top Multiplayer",
-  "StoreSection_TopFree": "Top Free",
-  "Library": "Library",
-  "RecentlyPlayed": "Recently Played",
-  "Return_To_Game": "Return to Game",
-  "Return_To_Home": "Return to Home",
-  "Controller_Bindings": "Controller Bindings",
-  "App_Video_Settings": "Video Settings",
-  "Desktop": "Desktop",
-  "Desktop_X": "Desktop %1$s",
-  "ShowKeyboardLabel": "Keyboard",
-  "ShowKeyboardTooltip": "Show Keyboard",
-  "Size": "Size",
-  "Mute": "Mute",
-  "Unmute": "Unmute",
-  "WelcomeHeader": "No Games?",
-  "WelcomeMessage": "Building a VR library that comes with you as your hardware changes has never been easier.",
-  "WelcomeBrowseStore": "Browse the Store",
-  "WelcomeInstall": "Install Games"
+  "Exit_SteamVR_Home": "Avslutt SteamVR Home",
+  "Exit_Game": "Avslutt spill",
+  "Menu": "Meny",
+  "Desktops": "Skrivebord",
+  "Volume": "Lydstyrke",
+  "X_More_Overlays": "%1$s overlegg til",
+  "Store": "Butikk",
+  "BrowseAllGames": "Bla gjennom alle spill",
+  "BrowseAll": "Bla gjennom alle",
+  "StoreSection_TopSingleplayer": "Populære enkeltspillere",
+  "StoreSection_TopMultiplayer": "Populære flerspillere",
+  "StoreSection_TopFree": "Populære gratisspill",
+  "Library": "Bibliotek",
+  "RecentlyPlayed": "Nylig spilt",
+  "Return_To_Game": "Tilbake til spillet",
+  "Return_To_Home": "Tilbake til hjemmet",
+  "Controller_Bindings": "Kontrollerbindinger",
+  "App_Video_Settings": "Videoinnstillinger",
+  "Desktop": "Skrivebord",
+  "Desktop_X": "Skrivebord %1$s",
+  "ShowKeyboardLabel": "Tastatur",
+  "ShowKeyboardTooltip": "Vis tastatur",
+  "HideKeyboardTooltip": "Skjul tastatur",
+  "Size": "Størrelse",
+  "Mute": "Demp",
+  "Unmute": "Fjern demping",
+  "WelcomeHeader": "Ingen spill?",
+  "WelcomeMessage": "Det har aldri vært enklere å bygge et VR-bibliotek som følger deg etter hvert som maskinvaren endres.",
+  "WelcomeBrowseStore": "Bla gjennom butikken",
+  "WelcomeInstall": "Installer spill",
+  "Play": "Spill"
 }
