--- a/resources/webinterface/dashboard/localization/dashboard_polish.json
+++ b/resources/webinterface/dashboard/localization/dashboard_polish.json
@@ -1,46 +1,48 @@
 {
-  "UI_Unknown": "Unknown",
-  "Now_Starting": "Next Up",
-  "Now_Starting_HomeApp": "Going Home To",
-  "Now_Playing": "Now Playing",
-  "Now_Playing_HomeApp": "Home",
-  "Now_Quitting": "Now Exiting",
-  "Now_Waiting": "Waiting...",
-  "BackToApp": "Back to App",
-  "Toggle_Room_View": "Toggle Room View",
-  "GoHome": "Go Home",
-  "QuitApp": "Quit App",
+  "UI_Unknown": "Nieznany",
+  "Now_Starting": "Następne",
+  "Now_Starting_HomeApp": "Wracasz na start do:",
+  "Now_Playing": "Teraz grane",
+  "Now_Playing_HomeApp": "Start",
+  "Now_Quitting": "Wychodzenie",
+  "Now_Waiting": "Oczekiwanie...",
+  "BackToApp": "Wróć do aplikacji",
+  "Toggle_Room_View": "Przełącz widok pokoju",
+  "GoHome": "Wróć na start",
+  "QuitApp": "Wyjdź z aplikacji",
   "DashboardPower_Header": "System",
-  "BindingCallout_Header": "Show Controls",
+  "BindingCallout_Header": "Pokaż sterowanie",
   "MutedLabel": "Wyciszono",
   "SteamVR_Home": "SteamVR Home",
-  "Exit_SteamVR_Home": "Exit SteamVR Home",
-  "Exit_Game": "Exit Game",
+  "Exit_SteamVR_Home": "Wyjdź ze SteamVR Home",
+  "Exit_Game": "Wyjdź z gry",
   "Menu": "Menu",
-  "Desktops": "Desktops",
-  "Volume": "Volume",
-  "X_More_Overlays": "%1$s More Overlays",
-  "Store": "Store",
-  "BrowseAllGames": "Browse All Games",
-  "BrowseAll": "Browse All",
-  "StoreSection_TopSingleplayer": "Top Singleplayer",
-  "StoreSection_TopMultiplayer": "Top Multiplayer",
-  "StoreSection_TopFree": "Top Free",
-  "Library": "Library",
-  "RecentlyPlayed": "Recently Played",
-  "Return_To_Game": "Return to Game",
-  "Return_To_Home": "Return to Home",
-  "Controller_Bindings": "Controller Bindings",
-  "App_Video_Settings": "Video Settings",
-  "Desktop": "Desktop",
-  "Desktop_X": "Desktop %1$s",
-  "ShowKeyboardLabel": "Keyboard",
-  "ShowKeyboardTooltip": "Show Keyboard",
-  "Size": "Size",
-  "Mute": "Mute",
-  "Unmute": "Unmute",
-  "WelcomeHeader": "No Games?",
-  "WelcomeMessage": "Building a VR library that comes with you as your hardware changes has never been easier.",
-  "WelcomeBrowseStore": "Browse the Store",
-  "WelcomeInstall": "Install Games"
+  "Desktops": "Pulpity",
+  "Volume": "Głośność",
+  "X_More_Overlays": "Jeszcze %1$s szt. nakładek",
+  "Store": "Sklep",
+  "BrowseAllGames": "Przeglądaj wszystkie gry",
+  "BrowseAll": "Przeglądaj wszystko",
+  "StoreSection_TopSingleplayer": "Najlepsze jednoosobowe",
+  "StoreSection_TopMultiplayer": "Najlepsze wieloosobowe",
+  "StoreSection_TopFree": "Najlepsze darmowe",
+  "Library": "Biblioteka",
+  "RecentlyPlayed": "Ostatnio grane",
+  "Return_To_Game": "Wróć do gry",
+  "Return_To_Home": "Wróć do domu",
+  "Controller_Bindings": "Konfiguracja kontrolera",
+  "App_Video_Settings": "Ustawienia obrazu",
+  "Desktop": "Pulpit",
+  "Desktop_X": "Pulpit %1$s",
+  "ShowKeyboardLabel": "Klawiatura",
+  "ShowKeyboardTooltip": "Pokaż klawiaturę",
+  "HideKeyboardTooltip": "Ukryj klawiaturę",
+  "Size": "Rozmiar",
+  "Mute": "Wycisz",
+  "Unmute": "Wył. wyciszenie",
+  "WelcomeHeader": "Brak gier?",
+  "WelcomeMessage": "Tworzenie biblioteki VR, która jest razem z tobą wraz ze zmianą twojego sprzętu, jeszcze nigdy nie było łatwiejsze.",
+  "WelcomeBrowseStore": "Przeglądaj sklep",
+  "WelcomeInstall": "Zainstaluj gry",
+  "Play": "Uruchom"
 }
