--- a/resources/webinterface/dashboard/localization/dashboard_portuguese.json
+++ b/resources/webinterface/dashboard/localization/dashboard_portuguese.json
@@ -1,46 +1,48 @@
 {
-  "UI_Unknown": "Unknown",
-  "Now_Starting": "Next Up",
-  "Now_Starting_HomeApp": "Going Home To",
-  "Now_Playing": "Now Playing",
-  "Now_Playing_HomeApp": "Home",
-  "Now_Quitting": "Now Exiting",
-  "Now_Waiting": "Waiting...",
-  "BackToApp": "Back to App",
-  "Toggle_Room_View": "Toggle Room View",
-  "GoHome": "Go Home",
-  "QuitApp": "Quit App",
-  "DashboardPower_Header": "System",
-  "BindingCallout_Header": "Show Controls",
+  "UI_Unknown": "Desconhecido",
+  "Now_Starting": "A seguir",
+  "Now_Starting_HomeApp": "A ir para o Início:",
+  "Now_Playing": "Localização atual:",
+  "Now_Playing_HomeApp": "Início",
+  "Now_Quitting": "A sair",
+  "Now_Waiting": "A aguardar...",
+  "BackToApp": "Voltar à aplicação",
+  "Toggle_Room_View": "Alternar vista da divisão",
+  "GoHome": "Ir para o Início",
+  "QuitApp": "Sair da aplicação",
+  "DashboardPower_Header": "Sistema",
+  "BindingCallout_Header": "Mostrar controlos",
   "MutedLabel": "Sem som",
   "SteamVR_Home": "SteamVR Home",
-  "Exit_SteamVR_Home": "Exit SteamVR Home",
-  "Exit_Game": "Exit Game",
+  "Exit_SteamVR_Home": "Sair do SteamVR Home",
+  "Exit_Game": "Sair do jogo",
   "Menu": "Menu",
-  "Desktops": "Desktops",
+  "Desktops": "Ambientes de trabalho",
   "Volume": "Volume",
-  "X_More_Overlays": "%1$s More Overlays",
-  "Store": "Store",
-  "BrowseAllGames": "Browse All Games",
-  "BrowseAll": "Browse All",
-  "StoreSection_TopSingleplayer": "Top Singleplayer",
-  "StoreSection_TopMultiplayer": "Top Multiplayer",
-  "StoreSection_TopFree": "Top Free",
-  "Library": "Library",
-  "RecentlyPlayed": "Recently Played",
-  "Return_To_Game": "Return to Game",
-  "Return_To_Home": "Return to Home",
-  "Controller_Bindings": "Controller Bindings",
-  "App_Video_Settings": "Video Settings",
-  "Desktop": "Desktop",
-  "Desktop_X": "Desktop %1$s",
-  "ShowKeyboardLabel": "Keyboard",
-  "ShowKeyboardTooltip": "Show Keyboard",
-  "Size": "Size",
-  "Mute": "Mute",
-  "Unmute": "Unmute",
-  "WelcomeHeader": "No Games?",
-  "WelcomeMessage": "Building a VR library that comes with you as your hardware changes has never been easier.",
-  "WelcomeBrowseStore": "Browse the Store",
-  "WelcomeInstall": "Install Games"
+  "X_More_Overlays": "Mais %1$s interfaces",
+  "Store": "Loja",
+  "BrowseAllGames": "Ver todos os jogos",
+  "BrowseAll": "Ver tudo",
+  "StoreSection_TopSingleplayer": "1 Jogador - Top",
+  "StoreSection_TopMultiplayer": "Multijogador - Top",
+  "StoreSection_TopFree": "Jogos grátis - Top",
+  "Library": "Biblioteca",
+  "RecentlyPlayed": "Jogados recentemente",
+  "Return_To_Game": "Voltar ao jogo",
+  "Return_To_Home": "Voltar ao Início",
+  "Controller_Bindings": "Controlos",
+  "App_Video_Settings": "Definições de vídeo",
+  "Desktop": "Ambiente de trabalho",
+  "Desktop_X": "Ambiente de trabalho %1$s",
+  "ShowKeyboardLabel": "Teclado",
+  "ShowKeyboardTooltip": "Mostrar teclado",
+  "HideKeyboardTooltip": "Ocultar teclado",
+  "Size": "Tamanho",
+  "Mute": "Silenciar",
+  "Unmute": "Remover silêncio",
+  "WelcomeHeader": "Sem jogos?",
+  "WelcomeMessage": "Manter uma biblioteca de R.V. que te acompanha mesmo depois de mudares de hardware nunca foi tão fácil.",
+  "WelcomeBrowseStore": "Explora a loja",
+  "WelcomeInstall": "Instala jogos",
+  "Play": "Jogar"
 }
