--- a/resources/webinterface/dashboard/localization/dashboard_spanish.json
+++ b/resources/webinterface/dashboard/localization/dashboard_spanish.json
@@ -36,11 +36,13 @@
   "Desktop_X": "Desktop %1$s",
   "ShowKeyboardLabel": "Keyboard",
   "ShowKeyboardTooltip": "Show Keyboard",
+  "HideKeyboardTooltip": "Ocultar el teclado",
   "Size": "Size",
   "Mute": "Mute",
   "Unmute": "Unmute",
   "WelcomeHeader": "No Games?",
   "WelcomeMessage": "Building a VR library that comes with you as your hardware changes has never been easier.",
   "WelcomeBrowseStore": "Browse the Store",
-  "WelcomeInstall": "Install Games"
+  "WelcomeInstall": "Install Games",
+  "Play": "Iniciar"
 }
