--- a/resources/webinterface/dashboard/localization/dashboard_ukrainian.json
+++ b/resources/webinterface/dashboard/localization/dashboard_ukrainian.json
@@ -1,46 +1,48 @@
 {
-  "UI_Unknown": "Unknown",
-  "Now_Starting": "Next Up",
-  "Now_Starting_HomeApp": "Going Home To",
-  "Now_Playing": "Now Playing",
-  "Now_Playing_HomeApp": "Home",
-  "Now_Quitting": "Now Exiting",
-  "Now_Waiting": "Waiting...",
-  "BackToApp": "Back to App",
-  "Toggle_Room_View": "Toggle Room View",
-  "GoHome": "Go Home",
-  "QuitApp": "Quit App",
-  "DashboardPower_Header": "System",
-  "BindingCallout_Header": "Show Controls",
+  "UI_Unknown": "Невідомо",
+  "Now_Starting": "Далі",
+  "Now_Starting_HomeApp": "Перехід додому в",
+  "Now_Playing": "Зараз у грі",
+  "Now_Playing_HomeApp": "Домівка",
+  "Now_Quitting": "Триває вихід",
+  "Now_Waiting": "Очікування…",
+  "BackToApp": "Назад до застосунку",
+  "Toggle_Room_View": "Перемкнути огляд кімнати",
+  "GoHome": "На домівку",
+  "QuitApp": "Вийти із застосунку",
+  "DashboardPower_Header": "Система",
+  "BindingCallout_Header": "Показати керування",
   "MutedLabel": "Заглушено",
-  "SteamVR_Home": "SteamVR Home",
-  "Exit_SteamVR_Home": "Exit SteamVR Home",
-  "Exit_Game": "Exit Game",
-  "Menu": "Menu",
-  "Desktops": "Desktops",
-  "Volume": "Volume",
-  "X_More_Overlays": "%1$s More Overlays",
-  "Store": "Store",
-  "BrowseAllGames": "Browse All Games",
-  "BrowseAll": "Browse All",
-  "StoreSection_TopSingleplayer": "Top Singleplayer",
-  "StoreSection_TopMultiplayer": "Top Multiplayer",
-  "StoreSection_TopFree": "Top Free",
-  "Library": "Library",
-  "RecentlyPlayed": "Recently Played",
-  "Return_To_Game": "Return to Game",
-  "Return_To_Home": "Return to Home",
-  "Controller_Bindings": "Controller Bindings",
-  "App_Video_Settings": "Video Settings",
-  "Desktop": "Desktop",
-  "Desktop_X": "Desktop %1$s",
-  "ShowKeyboardLabel": "Keyboard",
-  "ShowKeyboardTooltip": "Show Keyboard",
-  "Size": "Size",
-  "Mute": "Mute",
-  "Unmute": "Unmute",
-  "WelcomeHeader": "No Games?",
-  "WelcomeMessage": "Building a VR library that comes with you as your hardware changes has never been easier.",
-  "WelcomeBrowseStore": "Browse the Store",
-  "WelcomeInstall": "Install Games"
+  "SteamVR_Home": "Домівка SteamVR",
+  "Exit_SteamVR_Home": "Вийти з домівки SteamVR",
+  "Exit_Game": "Вийти з гри",
+  "Menu": "Меню",
+  "Desktops": "Комп’ютери",
+  "Volume": "Гучність",
+  "X_More_Overlays": "Ще оверлеїв: %1$s",
+  "Store": "Крамниця",
+  "BrowseAllGames": "Оглянути всі ігри",
+  "BrowseAll": "Оглянути все",
+  "StoreSection_TopSingleplayer": "Популярні однокористувацькі",
+  "StoreSection_TopMultiplayer": "Популярні багатокористувацькі",
+  "StoreSection_TopFree": "Популярні безкоштовні",
+  "Library": "Бібліотека",
+  "RecentlyPlayed": "Нещодавно зігране",
+  "Return_To_Game": "Повернутися до гри",
+  "Return_To_Home": "Повернутися на домівку",
+  "Controller_Bindings": "Розкладки контролера",
+  "App_Video_Settings": "Налаштування відео",
+  "Desktop": "Комп’ютер",
+  "Desktop_X": "Робочий стіл %1$s",
+  "ShowKeyboardLabel": "Клавіатура",
+  "ShowKeyboardTooltip": "Показати клавіатуру",
+  "HideKeyboardTooltip": "Приховати клавіатуру",
+  "Size": "Розмір",
+  "Mute": "Приглушити",
+  "Unmute": "Усунути приглушення",
+  "WelcomeHeader": "Немає ігор?",
+  "WelcomeMessage": "Створення ВР-бібліотеки, яка лишається з вами попри зміни обладнання, ще ніколи не було таким легким.",
+  "WelcomeBrowseStore": "Оглянути крамницю",
+  "WelcomeInstall": "Інсталювати ігри",
+  "Play": "Грати"
 }
