--- a/resources/webinterface/dashboard/localization/dashboard_vietnamese.json
+++ b/resources/webinterface/dashboard/localization/dashboard_vietnamese.json
@@ -1,46 +1,48 @@
 {
-  "UI_Unknown": "Unknown",
-  "Now_Starting": "Next Up",
-  "Now_Starting_HomeApp": "Going Home To",
-  "Now_Playing": "Now Playing",
-  "Now_Playing_HomeApp": "Home",
-  "Now_Quitting": "Now Exiting",
-  "Now_Waiting": "Waiting...",
-  "BackToApp": "Back to App",
-  "Toggle_Room_View": "Toggle Room View",
-  "GoHome": "Go Home",
-  "QuitApp": "Quit App",
-  "DashboardPower_Header": "System",
-  "BindingCallout_Header": "Show Controls",
+  "UI_Unknown": "Không xác định",
+  "Now_Starting": "Tiếp theo",
+  "Now_Starting_HomeApp": "Đang về trang chủ để",
+  "Now_Playing": "Hiện đang chạy",
+  "Now_Playing_HomeApp": "Trang chủ",
+  "Now_Quitting": "Hiện đang thoát",
+  "Now_Waiting": "Đang chờ...",
+  "BackToApp": "Trở về ứng dụng",
+  "Toggle_Room_View": "Bật tắt hiển thị phòng",
+  "GoHome": "Về trang chủ",
+  "QuitApp": "Thoát ứng dụng",
+  "DashboardPower_Header": "Hệ thống",
+  "BindingCallout_Header": "Hiện điều khiển",
   "MutedLabel": "Tắt tiếng",
   "SteamVR_Home": "SteamVR Home",
-  "Exit_SteamVR_Home": "Exit SteamVR Home",
-  "Exit_Game": "Exit Game",
-  "Menu": "Menu",
-  "Desktops": "Desktops",
-  "Volume": "Volume",
-  "X_More_Overlays": "%1$s More Overlays",
-  "Store": "Store",
-  "BrowseAllGames": "Browse All Games",
-  "BrowseAll": "Browse All",
-  "StoreSection_TopSingleplayer": "Top Singleplayer",
-  "StoreSection_TopMultiplayer": "Top Multiplayer",
-  "StoreSection_TopFree": "Top Free",
-  "Library": "Library",
-  "RecentlyPlayed": "Recently Played",
-  "Return_To_Game": "Return to Game",
-  "Return_To_Home": "Return to Home",
-  "Controller_Bindings": "Controller Bindings",
-  "App_Video_Settings": "Video Settings",
+  "Exit_SteamVR_Home": "Thoát trang chủ SteamVR",
+  "Exit_Game": "Thoát trò chơi",
+  "Menu": "Trình đơn",
+  "Desktops": "Các desktop",
+  "Volume": "Âm lượng",
+  "X_More_Overlays": "Thêm %1$s lớp phủ",
+  "Store": "Cửa hàng",
+  "BrowseAllGames": "Duyệt mọi trò chơi",
+  "BrowseAll": "Duyệt tất cả",
+  "StoreSection_TopSingleplayer": "Chơi đơn hàng đầu",
+  "StoreSection_TopMultiplayer": "Trò chơi nhiều người hàng đầu",
+  "StoreSection_TopFree": "Miễn phí hàng đầu",
+  "Library": "Thư viện",
+  "RecentlyPlayed": "Đã chơi gần đây",
+  "Return_To_Game": "Quay lại trò chơi",
+  "Return_To_Home": "Quay lại trang chủ",
+  "Controller_Bindings": "Cấu hình nút tay cầm",
+  "App_Video_Settings": "Thiết lập video",
   "Desktop": "Desktop",
-  "Desktop_X": "Desktop %1$s",
-  "ShowKeyboardLabel": "Keyboard",
-  "ShowKeyboardTooltip": "Show Keyboard",
-  "Size": "Size",
-  "Mute": "Mute",
-  "Unmute": "Unmute",
-  "WelcomeHeader": "No Games?",
-  "WelcomeMessage": "Building a VR library that comes with you as your hardware changes has never been easier.",
-  "WelcomeBrowseStore": "Browse the Store",
-  "WelcomeInstall": "Install Games"
+  "Desktop_X": "Màn hình %1$s",
+  "ShowKeyboardLabel": "Bàn phím",
+  "ShowKeyboardTooltip": "Hiện bàn phím",
+  "HideKeyboardTooltip": "Ẩn bàn phím",
+  "Size": "Kích cỡ",
+  "Mute": "Tắt tiếng",
+  "Unmute": "Mở tiếng",
+  "WelcomeHeader": "Không có trò nào?",
+  "WelcomeMessage": "Chưa bao giờ dễ dàng hơn để tạo một thư viện thực tế ảo có thể bắt kịp xu thế thay đổi phần cứng của bạn.",
+  "WelcomeBrowseStore": "Duyệt xem cửa hàng",
+  "WelcomeInstall": "Cài trò chơi",
+  "Play": "Chơi"
 }
