--- a/resources/webinterface/dashboard/localization/vrmonitor_czech.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_czech.json
@@ -13,9 +13,9 @@
 	"Settings_Controller_CustomBinding": "Vlastní",
 	"Settings_ThumbstickDeadzone_Text": "Mrtvá zóna páčky",
 	"Settings_ThumbstickDeadzone_Desc": "Upravte mrtvé zóny všech páček.",
-	"Settings_DominantHand": "Dominant Hand",
-	"Settings_DominantHand_Left": "Left",
-	"Settings_DominantHand_Right": "Right",
+	"Settings_DominantHand": "Dominantní ruka",
+	"Settings_DominantHand_Left": "Levá",
+	"Settings_DominantHand_Right": "Pravá",
 	"Settings_Loading_CurrentBinding": "Načítání aktuálního nastavení...",
 	"Settings_NeedSteamTo_ViewAndEditBindings": "Pro zobrazení a úpravu nastavení spusťte klienta služby Steam.",
 	"VRMonitor_Overview_SystemStatus_Title": "Stav systému",
@@ -51,12 +51,13 @@
 	"Settings_Audio_Headset": "Headset",
 	"Settings_Audio_Manual": "Manuálně",
 	"Settings_Audio_Mirroring_Label": "Zrcadlení zvuku",
-	"Settings_Audio_Default": "System Default",
+	"Settings_Audio_Mirroring_Independent_Volume_Label": "Zrcadlený zvuk s vlastním posuvníkem hlasitosti (beta)",
+	"Settings_Audio_Default": "Dle systému",
 	"Settings_Audio_Current_Setting_Unknown": "(vybrané zařízení nebylo nalezeno)",
 	"Settings_Audio_HDMIGain": "Zmenšení dynamického rozsahu signálu HTC VIVE – HDMI audio",
 	"Settings_SectionTitle_Advanced": "Pokročilé",
 	"Settings_SectionTitle_Developer": "Pro vývojáře",
-	"Settings_SectionTitle_Dashboard": "Dashboard",
+	"Settings_SectionTitle_Dashboard": "Hlavní obrazovka",
 	"Settings_SectionTitle_General": "Obecné",
 	"Settings_SectionTitle_Applications": "Aplikace",
 	"Settings_SectionTitle_Audio": "Zvuk",
@@ -64,7 +65,7 @@
 	"Settings_SectionTitle_Camera": "Kamera",
 	"Settings_SectionTitle_Bluetooth": "Bluetooth",
 	"Settings_SectionTitle_Power": "Napájení",
-	"Settings_SectionTitle_StartupShutdown": "Spouštění/vypínání",
+	"Settings_SectionTitle_StartupShutdown": "Spouštění/Vypínání",
 	"Settings_SectionTitle_Home": "Domov",
 	"Settings_SectionTitle_PlayArea": "Oblast pro hraní",
 	"Settings_SectionTitle_BaseStation": "Stanice",
@@ -73,7 +74,7 @@
 	"Advanced_AutoSaveTimingInfoOnExit": "Automaticky ukládat časování při ukončení",
 	"Settings_EnableWebHelperDebugger": "Povolit debuggování webového rozhraní",
 	"Settings_EnableWebHelperDebuggerDesc": "Umožní debuggování vývojářských nástrojů a přiřazených stránek na bázi prohlížeče Chromium. Pro buildy Perforce je tato možnost vždy povolena.",
-	"Advanced_PerfGraphInHMD": "Zobrazovat graf výkonu GPU v headsetu",
+	"Advanced_PerfGraphInHMD": "Zobrazit graf výkonu GPU v headsetu",
 	"Advanced_SaveFrameDataNow": "Uložit časování",
 	"Explanation_DisableEnhancedPowerManagement": "Pokud se potýkáte s výpadky při sledování pohybu nebo se Vám nedaří spárovat bezdrátové ovladače, zkuste pro USB zařízení režimu SteamVR zakázat pokročilé řízení napájení. ",
 	"Explanation_QuickCalibrate": "Rychlý reset přípravy místnosti. Nové hranice budou vycentrovány dle momentální pozice headsetu.",
@@ -92,16 +93,16 @@
 	"Settings_Advanced_Paths_Header": "Cesty",
 	"Settings_Advanced_Reset_Header": "Reset",
 	"Settings_Advanced_Status_Header": "Kontrola stavu",
-	"Settings_ShowSettingsInDashboard": "Show Settings Tab",
-	"Settings_ShowPowerMenu": "Show Power Options",
-	"Settings_AllowAppQuitting": "Allow App Quitting From Dashboard",
-	"Settings_ShowDesktopViews": "Show Desktop Tabs",
+	"Settings_ShowSettingsInDashboard": "Zobrazení záložky Nastavení",
+	"Settings_ShowPowerMenu": "Zobrazení nabídky napájení",
+	"Settings_AllowAppQuitting": "Ukončování aplikací z hl. obrazovky",
+	"Settings_ShowDesktopViews": "Zobrazení záložek z ploch",
 	"Settings_CheckForSteam": "Kontrolovat přítomnost klienta služby Steam",
 	"Settings_DebugInputBindings": "Povolit debuggování v rozhraní k přiřazování vstupních signálů",
-	"Advanced_GlobalActionSetPriority": "Enable global input from overlays (Experimental)",
+	"Advanced_GlobalActionSetPriority": "Povolit globální signály z překrytí (experimentální)",
 	"Settings_FadeToGrid": "Mřížka po záseku aplikace",
-	"Settings_EnableDashboard": "VR Dashboard on System Button",
-	"Settings_EnableDashboardDesc": "Allow the VR Dashboard to be summoned in response to a system button press.",
+	"Settings_EnableDashboard": "Hlavní obrazovka na tlačítku „System“",
+	"Settings_EnableDashboardDesc": "Zajistí, že stisk tlačítka „System“ otevře hlavní obrazovku.",
 	"Settings_HomeAppCheck": "Virtuální domov",
 	"Settings_HomeAppDesc": "Užijte si virtuální prostředí, komunitní funkce a více.",
 	"Settings_LargeSpace": "Velký prostor",
@@ -109,6 +110,9 @@
 	"Settings_LockedModeDesc": "Povolit renderování do headsetu i ve chvíli, kdy je počítač uzamčen.",
 	"Settings_PauseOnStandby": "Pozastavení VR při nečinnosti",
 	"Settings_PauseOnLocked": "Pozastavení VR při uzamčení PC",
+	"Settings_OverlayRenderQuality": "Kvalita renderování překrytí",
+	"Settings_High": "Vysoká",
+	"Settings_Low": "Nízká",
 	"Settings_MediumSpace": "Střední prostor",
 	"Settings_NightModeCheck": "Noční režim",
 	"Settings_NightModeDesc": "Ztmaví headset do 5.00 ráno (nebo do restartování režimu SteamVR).",
@@ -173,7 +177,7 @@
 	"Settings_PerApplication_Reprojection_Header": "Reprojekce",
 	"Settings_PerApplication_Reprojection_Checkbox": "Použít starší režim reprojekce",
 	"Settings_PerApplication_Reprojection_Description": "Zaškrtnutím této možnosti zakážete pro tuto aplikaci asynchronní reprojekci.",
-	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Refresh Rate Override",
+	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Přepsání obnovovací frekvence",
 	"Settings_Perapplication_RefreshRateOverride_Description": "Zaškrtnutím této možnosti Vám bude umožněno nastavit pro tuto aplikaci obnovovací frekvenci, která se liší od globálního nastavení.",
 	"Settings_MimeTypes_Pancake_Header": "Aplikace pro spouštění 2D aplikací",
 	"Settings_Camera_EnableCamera": "Povolit kameru",
@@ -212,7 +216,7 @@
 	"Settings_General_Cancel": "Zrušit",
 	"Settings_General_Confirm": "Potvrdit",
 	"Settings_General_Close": "Zavřít",
-	"Settings_General_CalibrateThumbstick": "Calibrate Thumbstick",
+	"Settings_General_CalibrateThumbstick": "Kalibrovat páčku",
 	"Settings_General_CalibrateThumbstick_ConnectAController": "Připojte ovladač disponující páčkou.",
 	"Settings_General_NotEnoughSamples": "Pro dokončení kalibrace ještě alespoň %1$s× pohněte páčkou směrem nahoru.",
 	"Settings_General_InviteMoreSamples": "Byl zjištěn úhel o velikosti %1$s°. Pro zpřesnění výsledku dál hýbejte páčkou směrem nahoru, nebo tuto kalibraci dokončete kliknutím na „Potvrdit“.",
@@ -223,13 +227,13 @@
 	"Settings_Dashboard_ShowProgressIndicator": "Ukazatel dlouhého stisku",
 	"Settings_Dashboard_Position": "Pozice hlavní obrazovky",
 	"Settings_Classic": "Klasická",
-	"Settings_Near": "Near",
-	"Settings_Middle": "Middle",
+	"Settings_Near": "Bližší",
+	"Settings_Middle": "Střední",
 	"Settings_DesktopScale": "Měřítko plochy",
 	"Settings_DashboardScale": "Měřítko hlavní obrazovky",
-	"Settings_DesktopDarkMode": "Desktop Dark Mode",
-	"Settings_ToggleDarkMode": "Toggle Dark Mode",
-	"Settings_Dark": "Dark",
+	"Settings_DesktopDarkMode": "Tmavý režim plochy",
+	"Settings_ToggleDarkMode": "Tmavý režim",
+	"Settings_Dark": "Tmavý",
 	"SettingsTime_5s": "Po 5 sekundách",
 	"SettingsTime_30s": "Po 30 sekundách",
 	"SettingsTime_1m": "Po 1 minutě",
@@ -264,7 +268,7 @@
 	"CameraTest_CameraFailed": "Chyba komunikace s kamerou",
 	"CameraTest_TrackingFailed": "Sledování s kamerou selhalo",
 	"CameraTest_Success": "Kamera funguje správně",
-	"CameraTest": "Camera Test",
+	"CameraTest": "Test kamery",
 	"CameraTestStatus_Evaluating": "Probíhá kontrola",
 	"CameraTestStatus_Success": "Vše v pořádku",
 	"CameraTestStatus_Failure": "Chyba",
@@ -275,12 +279,12 @@
 	"CameraRoomViewMode_VideoOpaque": "Neprůhledné objekty",
 	"Settings_MustRestart_Description": "Aby se projevily změny, musíte restartovat režim SteamVR.",
 	"Settings_MustRestart_RestartSteamVR_Button": "Restartovat režim SteamVR",
-	"Settings_MustQuitApp_Description": "Please quit the current game for changes to take effect.",
-	"Settings_MustQuitApp_QuitCurrentGame_Button": "Quit Game",
+	"Settings_MustQuitApp_Description": "Aby se projevily změny, ukončete aktuální hru.",
+	"Settings_MustQuitApp_QuitCurrentGame_Button": "Ukončit hru",
 	"Settings_NotSupported": "Není podporováno",
 	"Settings_AdvancedSettings": "Pokročilá nastavení",
-	"Settings_Show": "Zobrazit",
-	"Settings_Hide": "Skrýt",
+	"Settings_Show": "Ano",
+	"Settings_Hide": "Ne",
 	"Settings_ViveTracker": "Sledovací zařízení Vive",
 	"Settings_ViveTrackers": "Sledovací zařízení Vive",
 	"Settings_ViveTracker_Role": "Role sledovacího zařízení",
