--- a/resources/webinterface/dashboard/localization/vrmonitor_danish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_danish.json
@@ -13,9 +13,9 @@
 	"Settings_Controller_CustomBinding": "Tilpasset",
 	"Settings_ThumbstickDeadzone_Text": "Dødszone for styrepind",
 	"Settings_ThumbstickDeadzone_Desc": "Juster dødszone på alle styrepinde.",
-	"Settings_DominantHand": "Dominant Hand",
-	"Settings_DominantHand_Left": "Left",
-	"Settings_DominantHand_Right": "Right",
+	"Settings_DominantHand": "Dominerende hånd",
+	"Settings_DominantHand_Left": "Venstre",
+	"Settings_DominantHand_Right": "Højre",
 	"Settings_Loading_CurrentBinding": "Indlæser nuværende binding...",
 	"Settings_NeedSteamTo_ViewAndEditBindings": "Start Steam for at se og redigere bindinger.",
 	"VRMonitor_Overview_SystemStatus_Title": "Systemstatus",
@@ -46,17 +46,18 @@
 	"Settings_SelectAnOption": "Vælg en indstilling...",
 	"Settings_BluetoothSettings": "Bluetooth-indstillinger",
 	"Settings_BaseStationSettings": "Indstillinger for basisstationer",
-	"Settings_Audio_Playback_Automatic_Label": "Lydenhed – output",
-	"Settings_Audio_Recording_Automatic_Label": "Lydenhed – input",
+	"Settings_Audio_Playback_Automatic_Label": "Enhed til lydoutput",
+	"Settings_Audio_Recording_Automatic_Label": "Enhed til lydinput",
 	"Settings_Audio_Headset": "Headset",
 	"Settings_Audio_Manual": "Manuelt",
 	"Settings_Audio_Mirroring_Label": "Lydspejling",
-	"Settings_Audio_Default": "System Default",
+	"Settings_Audio_Mirroring_Independent_Volume_Label": "Lydspejling bruger en uafhængig lydstyrkeskyder (beta)",
+	"Settings_Audio_Default": "Systemstandard",
 	"Settings_Audio_Current_Setting_Unknown": "(Den valgte enhed kan ikke spores)",
 	"Settings_Audio_HDMIGain": "Forstærkningsreduktion til på VIVE HDMI-lyd",
 	"Settings_SectionTitle_Advanced": "Avanceret",
 	"Settings_SectionTitle_Developer": "Udvikler",
-	"Settings_SectionTitle_Dashboard": "Dashboard",
+	"Settings_SectionTitle_Dashboard": "Instrumentbræt",
 	"Settings_SectionTitle_General": "Generelt",
 	"Settings_SectionTitle_Applications": "Applikationer",
 	"Settings_SectionTitle_Audio": "Lyd",
@@ -92,16 +93,16 @@
 	"Settings_Advanced_Paths_Header": "Stier",
 	"Settings_Advanced_Reset_Header": "Nulstil",
 	"Settings_Advanced_Status_Header": "Statustjek",
-	"Settings_ShowSettingsInDashboard": "Show Settings Tab",
-	"Settings_ShowPowerMenu": "Show Power Options",
-	"Settings_AllowAppQuitting": "Allow App Quitting From Dashboard",
-	"Settings_ShowDesktopViews": "Show Desktop Tabs",
+	"Settings_ShowSettingsInDashboard": "Vis indstillingsfanen",
+	"Settings_ShowPowerMenu": "Vis strømstyring",
+	"Settings_AllowAppQuitting": "Tillad appafslutning fra instrumentbræt",
+	"Settings_ShowDesktopViews": "Vis skrivebordsfaner",
 	"Settings_CheckForSteam": "Tjek efter Steam",
 	"Settings_DebugInputBindings": "Slå debugging-indstillinger til i brugergrænsefladen for inputbinding",
-	"Advanced_GlobalActionSetPriority": "Enable global input from overlays (Experimental)",
+	"Advanced_GlobalActionSetPriority": "Slå globalt input fra overlays til (eksperimentel)",
 	"Settings_FadeToGrid": "Udton til gittervisning, når app hænger",
-	"Settings_EnableDashboard": "VR Dashboard on System Button",
-	"Settings_EnableDashboardDesc": "Allow the VR Dashboard to be summoned in response to a system button press.",
+	"Settings_EnableDashboard": "VR-instrumentbræt ved tryk på systemknap",
+	"Settings_EnableDashboardDesc": "Tillad, at VR-instrumentbrættet åbnes, når der trykkes på en systemknap.",
 	"Settings_HomeAppCheck": "SteamVR Home",
 	"Settings_HomeAppDesc": "Brug virtuelle miljøer, sociale funktioner og meget mere.",
 	"Settings_LargeSpace": "Stort område",
@@ -109,6 +110,9 @@
 	"Settings_LockedModeDesc": "Tillad gengivelse til headsettet, mens computeren er låst.",
 	"Settings_PauseOnStandby": "Sæt VR på pause, når headset er passivt",
 	"Settings_PauseOnLocked": "Sæt VR på pause, når computeren er låst",
+	"Settings_OverlayRenderQuality": "Overlaygengivelseskvalitet",
+	"Settings_High": "Høj",
+	"Settings_Low": "Lav",
 	"Settings_MediumSpace": "Medium område",
 	"Settings_NightModeCheck": "Nattilstand",
 	"Settings_NightModeDesc": "Dæmp headsettet indtil kl. 5:00 (eller indtil SteamVR genstartes).",
@@ -173,7 +177,7 @@
 	"Settings_PerApplication_Reprojection_Header": "Genprojicering",
 	"Settings_PerApplication_Reprojection_Checkbox": "Brug oprindelig genprojiceringstilstand",
 	"Settings_PerApplication_Reprojection_Description": "Hvis dette felt markeres, deaktiveres asynkron genprojicering for denne titel.",
-	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Refresh Rate Override",
+	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Tilsidesæt opdateringshastighed",
 	"Settings_Perapplication_RefreshRateOverride_Description": "Hvis dette felt markeres, kan du angive en anden opdateringshastighed end applikationens globale indstilling.",
 	"Settings_MimeTypes_Pancake_Header": "Vælg en applikation, som 2D-applikationer skal startes i",
 	"Settings_Camera_EnableCamera": "Slå kamera til",
@@ -212,7 +216,7 @@
 	"Settings_General_Cancel": "Annuller",
 	"Settings_General_Confirm": "Bekræft",
 	"Settings_General_Close": "Luk",
-	"Settings_General_CalibrateThumbstick": "Calibrate Thumbstick",
+	"Settings_General_CalibrateThumbstick": "Kalibrer styrepind",
 	"Settings_General_CalibrateThumbstick_ConnectAController": "Tilslut en controller med en styrepind.",
 	"Settings_General_NotEnoughSamples": "Tryk op på styrepinden mindst %1$s gange til for at gennemføre kalibreringen.",
 	"Settings_General_InviteMoreSamples": "Vinkel på %1$s°. Bliv ved med at trykke op for at justere værdien, eller tryk på \"Bekræft\" for at acceptere kalibreringen.",
@@ -223,13 +227,13 @@
 	"Settings_Dashboard_ShowProgressIndicator": "Statusindikator – langt tryk",
 	"Settings_Dashboard_Position": "Placering af instrumentbræt",
 	"Settings_Classic": "Klassisk",
-	"Settings_Near": "Near",
-	"Settings_Middle": "Middle",
-	"Settings_DesktopScale": "Skalering til skrivebord",
+	"Settings_Near": "Nær",
+	"Settings_Middle": "I midten",
+	"Settings_DesktopScale": "Skalering af skrivebord",
 	"Settings_DashboardScale": "Skalering af instrumentbræt",
-	"Settings_DesktopDarkMode": "Desktop Dark Mode",
-	"Settings_ToggleDarkMode": "Toggle Dark Mode",
-	"Settings_Dark": "Dark",
+	"Settings_DesktopDarkMode": "Mørkt skrivebordstema",
+	"Settings_ToggleDarkMode": "Slå mørkt skrivebordstema til/fra",
+	"Settings_Dark": "Mørkt",
 	"SettingsTime_5s": "5 sekunder",
 	"SettingsTime_30s": "30 sekunder",
 	"SettingsTime_1m": "1 minut",
@@ -264,7 +268,7 @@
 	"CameraTest_CameraFailed": "Kamerakommunikation mislykkedes",
 	"CameraTest_TrackingFailed": "Sporing mislykkedes med kameraet aktiveret",
 	"CameraTest_Success": "Bestod kameratest",
-	"CameraTest": "Camera Test",
+	"CameraTest": "Kameratest",
 	"CameraTestStatus_Evaluating": "Kontrollerer",
 	"CameraTestStatus_Success": "Succes",
 	"CameraTestStatus_Failure": "Mislykkedes",
@@ -273,10 +277,10 @@
 	"CameraRoomViewMode_EdgeB": "Farvede skygger",
 	"CameraRoomViewMode_VideoTranslucent": "Gennemsigtig overgang",
 	"CameraRoomViewMode_VideoOpaque": "Uigennemsigtig overgang",
-	"Settings_MustRestart_Description": "Du skal genstarte SteamVR, før visse ændring træder i kraft.",
+	"Settings_MustRestart_Description": "SteamVR skal genstartes, før visse ændringer træder i kraft.",
 	"Settings_MustRestart_RestartSteamVR_Button": "Genstart SteamVR",
-	"Settings_MustQuitApp_Description": "Please quit the current game for changes to take effect.",
-	"Settings_MustQuitApp_QuitCurrentGame_Button": "Quit Game",
+	"Settings_MustQuitApp_Description": "Det nuværende spil skal afsluttes, før ændringerne træder i kraft.",
+	"Settings_MustQuitApp_QuitCurrentGame_Button": "Afslut spil",
 	"Settings_NotSupported": "Ikke understøttet",
 	"Settings_AdvancedSettings": "Avancerede indstillinger",
 	"Settings_Show": "Vis",
