--- a/resources/webinterface/dashboard/localization/vrmonitor_dutch.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_dutch.json
@@ -13,9 +13,9 @@
 	"Settings_Controller_CustomBinding": "Aangepast",
 	"Settings_ThumbstickDeadzone_Text": "Dode zone voor analoge stick",
 	"Settings_ThumbstickDeadzone_Desc": "Dode zone aanpassen voor alle analoge sticks.",
-	"Settings_DominantHand": "Dominant Hand",
-	"Settings_DominantHand_Left": "Left",
-	"Settings_DominantHand_Right": "Right",
+	"Settings_DominantHand": "Dominante hand",
+	"Settings_DominantHand_Left": "Links",
+	"Settings_DominantHand_Right": "Rechts",
 	"Settings_Loading_CurrentBinding": "Huidige configuratie aan het laden...",
 	"Settings_NeedSteamTo_ViewAndEditBindings": "Start Steam op om de configuraties te bekijken en te bewerken.",
 	"VRMonitor_Overview_SystemStatus_Title": "Systeemstatus",
@@ -51,7 +51,8 @@
 	"Settings_Audio_Headset": "Headset",
 	"Settings_Audio_Manual": "Handmatig",
 	"Settings_Audio_Mirroring_Label": "Audiospiegeling",
-	"Settings_Audio_Default": "System Default",
+	"Settings_Audio_Mirroring_Independent_Volume_Label": "Audiokopie gebruikt een eigen volumecontrole (bèta)",
+	"Settings_Audio_Default": "Systeemstandaard",
 	"Settings_Audio_Current_Setting_Unknown": "(Momenteel geselecteerde apparaat is niet gevonden)",
 	"Settings_Audio_HDMIGain": "Versterkingsvermindering voor VIVE HDMI-audio",
 	"Settings_SectionTitle_Advanced": "Geavanceerd",
@@ -92,16 +93,16 @@
 	"Settings_Advanced_Paths_Header": "Paden",
 	"Settings_Advanced_Reset_Header": "Herstellen",
 	"Settings_Advanced_Status_Header": "Status controleren",
-	"Settings_ShowSettingsInDashboard": "Show Settings Tab",
-	"Settings_ShowPowerMenu": "Show Power Options",
-	"Settings_AllowAppQuitting": "Allow App Quitting From Dashboard",
-	"Settings_ShowDesktopViews": "Show Desktop Tabs",
+	"Settings_ShowSettingsInDashboard": "Instellingentabblad weergeven",
+	"Settings_ShowPowerMenu": "Energieopties weergeven",
+	"Settings_AllowAppQuitting": "App afsluiten toestaan vanuit dashboard",
+	"Settings_ShowDesktopViews": "Bureaubladtabbladen weergeven",
 	"Settings_CheckForSteam": "Op Steam controleren",
-	"Settings_DebugInputBindings": "Debugopties in de gebruikersinterface voor invoerconfiguratie inschakelen",
+	"Settings_DebugInputBindings": "Debugopties in de gebruikersinterface voor invoerconfiguratie",
 	"Advanced_GlobalActionSetPriority": "Enable global input from overlays (Experimental)",
 	"Settings_FadeToGrid": "Naar raster vervagen als de app hangt",
-	"Settings_EnableDashboard": "VR Dashboard on System Button",
-	"Settings_EnableDashboardDesc": "Allow the VR Dashboard to be summoned in response to a system button press.",
+	"Settings_EnableDashboard": "VR-dashboard op systeemknop",
+	"Settings_EnableDashboardDesc": "Hiermee wordt het VR-dashboard na een druk op de systeemknop geopend.",
 	"Settings_HomeAppCheck": "SteamVR Home",
 	"Settings_HomeAppDesc": "Geniet van virtuele omgevingen, sociale functies en meer.",
 	"Settings_LargeSpace": "Grote ruimte",
@@ -109,6 +110,9 @@
 	"Settings_LockedModeDesc": "Renderen naar headset toestaan terwijl de computer vergrendeld is.",
 	"Settings_PauseOnStandby": "VR pauzeren als de headset inactief is",
 	"Settings_PauseOnLocked": "VR pauzeren als de computer vergrendeld is",
+	"Settings_OverlayRenderQuality": "Weergavekwaliteit overlay",
+	"Settings_High": "Hoog",
+	"Settings_Low": "Laag",
 	"Settings_MediumSpace": "Middelgrote ruimte",
 	"Settings_NightModeCheck": "Nachtmodus",
 	"Settings_NightModeDesc": "Dimt de headset tot 05:00 (of tot SteamVR wordt herstart).",
@@ -173,7 +177,7 @@
 	"Settings_PerApplication_Reprojection_Header": "Reprojectie",
 	"Settings_PerApplication_Reprojection_Checkbox": "Klassieke modus voor reprojectie gebruiken",
 	"Settings_PerApplication_Reprojection_Description": "Door deze optie in te schakelen wordt asynchrone reprojectie voor deze titel uitgeschakeld.",
-	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Refresh Rate Override",
+	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Vernieuwingsfrequentie overschrijven",
 	"Settings_Perapplication_RefreshRateOverride_Description": "Als je deze optie aanvinkt, kun je een andere vernieuwingsfrequentie invoeren voor deze toepassing.",
 	"Settings_MimeTypes_Pancake_Header": "Selecteer een toepassing om 2D-toepassingen in te starten",
 	"Settings_Camera_EnableCamera": "Camera",
@@ -212,7 +216,7 @@
 	"Settings_General_Cancel": "Annuleren",
 	"Settings_General_Confirm": "Bevestigen",
 	"Settings_General_Close": "Sluiten",
-	"Settings_General_CalibrateThumbstick": "Calibrate Thumbstick",
+	"Settings_General_CalibrateThumbstick": "Analoge stick kalibreren",
 	"Settings_General_CalibrateThumbstick_ConnectAController": "Sluit een controller aan met een analoge stick.",
 	"Settings_General_NotEnoughSamples": "Druk de analoge stick nog minstens %1$s keer naar boven om het kalibreren af te ronden.",
 	"Settings_General_InviteMoreSamples": "Berekende hoek: %1$s°. Blijf naar boven toe drukken om die waarde verder af te stellen of druk op 'Bevestigen' om deze kalibratie te aanvaarden.",
@@ -223,13 +227,13 @@
 	"Settings_Dashboard_ShowProgressIndicator": "Statusindicator – lang indrukken",
 	"Settings_Dashboard_Position": "Positie van dashboard",
 	"Settings_Classic": "Klassiek",
-	"Settings_Near": "Near",
-	"Settings_Middle": "Middle",
+	"Settings_Near": "Dichtbij",
+	"Settings_Middle": "Midden",
 	"Settings_DesktopScale": "Schaal voor desktop",
 	"Settings_DashboardScale": "Schaal voor dashboard",
-	"Settings_DesktopDarkMode": "Desktop Dark Mode",
-	"Settings_ToggleDarkMode": "Toggle Dark Mode",
-	"Settings_Dark": "Dark",
+	"Settings_DesktopDarkMode": "Donkere modus voor bureaublad",
+	"Settings_ToggleDarkMode": "Donkere modus in-/uitschakelen",
+	"Settings_Dark": "Donker",
 	"SettingsTime_5s": "5 seconden",
 	"SettingsTime_30s": "30 seconden",
 	"SettingsTime_1m": "1 minuut",
@@ -275,8 +279,8 @@
 	"CameraRoomViewMode_VideoOpaque": "Ondoorzichtige doorvoer",
 	"Settings_MustRestart_Description": "SteamVR moet herstart worden om sommige wijzigingen toe te passen.",
 	"Settings_MustRestart_RestartSteamVR_Button": "SteamVR herstarten",
-	"Settings_MustQuitApp_Description": "Please quit the current game for changes to take effect.",
-	"Settings_MustQuitApp_QuitCurrentGame_Button": "Quit Game",
+	"Settings_MustQuitApp_Description": "Sluit het huidige spel om de wijzigingen toe te passen.",
+	"Settings_MustQuitApp_QuitCurrentGame_Button": "Spel afsluiten",
 	"Settings_NotSupported": "Niet ondersteund",
 	"Settings_AdvancedSettings": "Geavanceerde instellingen",
 	"Settings_Show": "Tonen",
