--- a/resources/webinterface/dashboard/localization/vrmonitor_hungarian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_hungarian.json
@@ -13,9 +13,9 @@
 	"Settings_Controller_CustomBinding": "Egyedi",
 	"Settings_ThumbstickDeadzone_Text": "Botkormány-holtsáv",
 	"Settings_ThumbstickDeadzone_Desc": "A holtsáv állítása mindegyik botkormányon.",
-	"Settings_DominantHand": "Dominant Hand",
-	"Settings_DominantHand_Left": "Left",
-	"Settings_DominantHand_Right": "Right",
+	"Settings_DominantHand": "Domináns kéz",
+	"Settings_DominantHand_Left": "Bal",
+	"Settings_DominantHand_Right": "Jobb",
 	"Settings_Loading_CurrentBinding": "Jelenlegi kiosztás betöltése...",
 	"Settings_NeedSteamTo_ViewAndEditBindings": "A kiosztások megnézéséghez és szerkesztéséhez indítsd el a Steamet.",
 	"VRMonitor_Overview_SystemStatus_Title": "Rendszerállapot",
@@ -51,12 +51,13 @@
 	"Settings_Audio_Headset": "Fejszett",
 	"Settings_Audio_Manual": "Kézi",
 	"Settings_Audio_Mirroring_Label": "Hangtükrözés",
-	"Settings_Audio_Default": "System Default",
+	"Settings_Audio_Mirroring_Independent_Volume_Label": "A hangtükrözés egyedi hangerőcsúszkát használ (béta)",
+	"Settings_Audio_Default": "Rendszer-alapértelmezett",
 	"Settings_Audio_Current_Setting_Unknown": "(A jelenleg kiválasztott eszköz nincs jelen)",
 	"Settings_Audio_HDMIGain": "Erősítéscsökkentés a VIVE HDMI hangon",
 	"Settings_SectionTitle_Advanced": "Haladó",
 	"Settings_SectionTitle_Developer": "Fejlesztői",
-	"Settings_SectionTitle_Dashboard": "Dashboard",
+	"Settings_SectionTitle_Dashboard": "Műszerfal",
 	"Settings_SectionTitle_General": "Általános",
 	"Settings_SectionTitle_Applications": "Alkalmazások",
 	"Settings_SectionTitle_Audio": "Hang",
@@ -92,30 +93,33 @@
 	"Settings_Advanced_Paths_Header": "Útvonalak",
 	"Settings_Advanced_Reset_Header": "Alaphelyzet",
 	"Settings_Advanced_Status_Header": "Állapotellenőrzés",
-	"Settings_ShowSettingsInDashboard": "Show Settings Tab",
-	"Settings_ShowPowerMenu": "Show Power Options",
-	"Settings_AllowAppQuitting": "Allow App Quitting From Dashboard",
-	"Settings_ShowDesktopViews": "Show Desktop Tabs",
+	"Settings_ShowSettingsInDashboard": "Beállítások fül mutatása",
+	"Settings_ShowPowerMenu": "Energiagazdálkodási lehetőségek mutatása",
+	"Settings_AllowAppQuitting": "Alkalmazás kilépésének engedélyezése a műszerfalon",
+	"Settings_ShowDesktopViews": "Asztalfülek mutatása",
 	"Settings_CheckForSteam": "Steam keresése",
 	"Settings_DebugInputBindings": "Hibaelhárítási lehetőségek engedélyezése a bemenetkiosztási kezelőfelületen",
-	"Advanced_GlobalActionSetPriority": "Enable global input from overlays (Experimental)",
+	"Advanced_GlobalActionSetPriority": "Globális bevitel engedélyezése átfedésekből (Kísérleti)",
 	"Settings_FadeToGrid": "Alkalmazásbefagyáskor ráccsá halványulás",
-	"Settings_EnableDashboard": "VR Dashboard on System Button",
-	"Settings_EnableDashboardDesc": "Allow the VR Dashboard to be summoned in response to a system button press.",
+	"Settings_EnableDashboard": "VR műszerfal a Rendszer gombon",
+	"Settings_EnableDashboardDesc": "A VR műszerfal behívásának engedélyezése a Rendszer gomb megnyomásakor.",
 	"Settings_HomeAppCheck": "SteamVR Otthon",
 	"Settings_HomeAppDesc": "Élvezz virtuális környezeteket, közösségi funkciókat és sok mást.",
 	"Settings_LargeSpace": "Nagy tér",
 	"Settings_LockedModeCheck": "Zárolt mód",
 	"Settings_LockedModeDesc": "Engedélyezi a fejszettre renderelést, miközben a számítógép zárolva van.",
 	"Settings_PauseOnStandby": "VR felfüggesztése, amikor a fejszett tétlen",
-	"Settings_PauseOnLocked": "Pause VR when computer is locked",
+	"Settings_PauseOnLocked": "VR felfüggesztése, amikor a számítógép zárolva van",
+	"Settings_OverlayRenderQuality": "Átfedés megjelenítési minősége",
+	"Settings_High": "Magas",
+	"Settings_Low": "Alacsony",
 	"Settings_MediumSpace": "Közepes tér",
 	"Settings_NightModeCheck": "Éjszakai mód",
 	"Settings_NightModeDesc": "Reggel öt óráig (vagy a SteamVR újraindításáig) leveszi a fejszett fényerejét.",
 	"Settings_ShowPlaylistMenu": "Lejátszólista menü mutatása",
 	"Settings_SmallSpace": "Kis tér",
 	"Settings_StatusWindowAlwaysOnTop_Info": " ",
-	"Settings_StatusWindowAlwaysOnTop_Text": "SteamVR Always on Top",
+	"Settings_StatusWindowAlwaysOnTop_Text": "A SteamVR mindig felül",
 	"Settings_StatusWindowMinimizeToTray_Text": "Minimalizáláskor a SteamVR állapot minimalizálódik a tálcára",
 	"Settings_SuppressWarnings_Text": "Figyelmeztetések és értesítések némítása, amikor a SteamVR állapot minimalizált",
 	"StatusCheckInterval_Never": "Soha",
@@ -142,11 +146,11 @@
 	"Settings_Video_AppResFooter": "A jelenlegi beállítás mindkét szemhez %1$s",
 	"Settings_Advanced_MotionSmoothing_Header": "Mozgássimítás",
 	"Settings_Advanced_MotionSmoothing_Description": "Új képkockákat szintetizál a megfelelő élmény fenntartására, amikor a futó alkalmazás nem tudja tartani a lépést.",
-	"Settings_Advanced_MotionSmoothing_Disabled": "Motion smoothing not supported on this GPU / driver version (requires asynchronous reprojection support).",
-	"Settings_Advanced_MotionSmoothing_Disabled_Win7": "Motion Smoothing is not supported on older versions of Windows.",
+	"Settings_Advanced_MotionSmoothing_Disabled": "A mozgássimítás ezen a videokártyán / illesztőprogram-verzión nem támogatott (az aszinkron újravetítés támogatását igényli).",
+	"Settings_Advanced_MotionSmoothing_Disabled_Win7": "A mozgássimítás a Windows régebbi verzióin nem támogatott.",
 	"Settings_Advanced_Supersampling_Auto": "Automatikus",
 	"Settings_Advanced_Supersampling_Custom": "Egyedi",
-	"Settings_Advanced_Supersampling_Header": "Render Resolution",
+	"Settings_Advanced_Supersampling_Header": "Képalkotási felbontás",
 	"Settings_Advanced_Supersampling_Warning": "Az alábbi beállítás felülírja az automatikus beállítást, és kihat minden alkalmazásra. Egy konkrét alkalmazás felbontásának megváltoztatásához látogasd meg az alkalmazásbeállításokat.",
 	"Settings_Advanced_Supersampling_WidthByHeight": "%1$s × %2$s",
 	"Settings_Advanced_SupersamplingManualOverride": "Felbontásállítás engedélyezése",
@@ -173,13 +177,13 @@
 	"Settings_PerApplication_Reprojection_Header": "Újravetítés",
 	"Settings_PerApplication_Reprojection_Checkbox": "Hagyományos újravetítési mód használata",
 	"Settings_PerApplication_Reprojection_Description": "E lehetőség bejelölése kikapcsolja az aszinkron újravetítést ennél az alkalmazásnál.",
-	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Refresh Rate Override",
-	"Settings_Perapplication_RefreshRateOverride_Description": "Checking this option will allow specifying a different refresh rate from the global setting for this application.",
+	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Frissítési frekvencia felülbírálás",
+	"Settings_Perapplication_RefreshRateOverride_Description": "E lehetőség bejelölése lehetővé teszi a globálistól eltérő frissítési frekvencia megadását ehhez az alkalmazáshoz.",
 	"Settings_MimeTypes_Pancake_Header": "Válassz alkalmazást a 2D-s alkalmazások futtatásához",
 	"Settings_Camera_EnableCamera": "Kamera bekapcsolása",
-	"Settings_Camera_AllowCameraInDashboard": "Show Camera on Controller",
+	"Settings_Camera_AllowCameraInDashboard": "Kamera mutatása a játékvezérlőn",
 	"Settings_Camera_AllowCameraInDashboard_Desc": "Bekapcsol egy kameraablakot a játékvezérlődhöz kapcsolva, amikor felhozod a Műszerfalat.",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Room Edge",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "Kamera mutatása a szoba szélén",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
 	"Settings_Camera_AllowCameraForRoomView": "Szobanézet bekapcsolása",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "A szobanézethez bármikor hozzáférhetsz a Rendszer gombot duplán megnyomva.",
@@ -188,8 +192,8 @@
 	"Settings_Camera_CompatibilityExplanation": "Ha követésvesztést tapasztalsz, lehet, hogy csökkenteni kell a kamera frissítési sebességét, kikapcsolni a kamerát, vagy kipróbálni egy másik USB-portot.",
 	"Advanced_Appearance": "Megjelenés",
 	"Settings_Appearance_Background": "Háttér",
-	"Settings_Appearance_Background_NoSteam": "Launch Steam to see any any additional backgrounds.",
-	"Settings_Appearance_Background_Select": "Change Background",
+	"Settings_Appearance_Background_NoSteam": "Bármilyen további háttér megnézéséhez indítsd el a Steamet.",
+	"Settings_Appearance_Background_Select": "Háttérváltoztatás",
 	"Settings_Appearance_BackgroundDesc": "Válassz hátteret az alapértelmezett térhez.",
 	"Settings_Appearance_UseDomeProjection": "Kupolavetítés használata",
 	"Settings_Appearance_UseDomeProjectionDesc": "Megváltoztatja a háttérkép vetítési stílusát. Egyes hátterek ezt a funkciót használják, hogy magával ragadóbb élményt nyújtsanak. Ha a kiválasztott háttér torznak tűnik, próbáld meg ezt bekapcsolni.",
@@ -212,7 +216,7 @@
 	"Settings_General_Cancel": "Mégse",
 	"Settings_General_Confirm": "Megerősít",
 	"Settings_General_Close": "Bezár",
-	"Settings_General_CalibrateThumbstick": "Calibrate Thumbstick",
+	"Settings_General_CalibrateThumbstick": "Botkormány kalibrálása",
 	"Settings_General_CalibrateThumbstick_ConnectAController": "Csatlakoztass egy botkormánnyal rendelkező játékvezérlőt.",
 	"Settings_General_NotEnoughSamples": "Kérjük, döntsd fölfelé a botkormányt még legalább %1$s alkalommal a kalibrálás befejezéséhez.",
 	"Settings_General_InviteMoreSamples": "A szög számított értéke %1$s°. Folytasd a fölfelé döntést az érték finomításához, vagy nyomj Megerősítést e kalibrálás elfogadásához.",
@@ -220,16 +224,16 @@
 	"Settings_General_RightThumbstickAngle": "Jobb botkormány szöge: %1$s°",
 	"Settings_General_LeftThumbstickAngle_NoValue": "Bal botkormány szöge",
 	"Settings_General_RightThumbstickAngle_NoValue": "Jobb botkormány szöge",
-	"Settings_Dashboard_ShowProgressIndicator": "Long-press progress indicator",
-	"Settings_Dashboard_Position": "Dashboard Position",
-	"Settings_Classic": "Classic",
-	"Settings_Near": "Near",
-	"Settings_Middle": "Middle",
-	"Settings_DesktopScale": "Desktop Scale",
-	"Settings_DashboardScale": "Dashboard Scale",
-	"Settings_DesktopDarkMode": "Desktop Dark Mode",
-	"Settings_ToggleDarkMode": "Toggle Dark Mode",
-	"Settings_Dark": "Dark",
+	"Settings_Dashboard_ShowProgressIndicator": "Hosszú lenyomás haladásjelző",
+	"Settings_Dashboard_Position": "Műszerfal pozíciója",
+	"Settings_Classic": "Klasszikus",
+	"Settings_Near": "Közeli",
+	"Settings_Middle": "Közepes",
+	"Settings_DesktopScale": "Asztal mérete",
+	"Settings_DashboardScale": "Műszerfal mérete",
+	"Settings_DesktopDarkMode": "Sötét módú műszerfal",
+	"Settings_ToggleDarkMode": "Sötét mód be/ki",
+	"Settings_Dark": "Sötét",
 	"SettingsTime_5s": "5 másodperc",
 	"SettingsTime_30s": "30 másodperc",
 	"SettingsTime_1m": "1 perc",
@@ -248,10 +252,10 @@
 	"Settings_Appearance_Environment": "Otthoni környezeted megváltoztatása",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOn": "Mindig mutassa a padlóhatárokat",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOnDesc": " ",
-	"Settings_ConnectAnHMD": "Please connect a headset.",
-	"Settings_Loading": "Loading...",
+	"Settings_ConnectAnHMD": "Csatlakoztass egy fejszettet.",
+	"Settings_Loading": "Betöltés...",
 	"Settings_ResetToDefault": "Alapbeállításokra",
-	"Settings_ResetPageToDefault": "Reset Page To Default",
+	"Settings_ResetPageToDefault": "Oldal alapértékekre állítása",
 	"Settings_ToggleButton_On": "Be",
 	"Settings_ToggleButton_Off": "Ki",
 	"Settings_ToggleButton_Disable": "Kikapcsolás",
@@ -264,7 +268,7 @@
 	"CameraTest_CameraFailed": "A kamerakommunikáció sikertelen",
 	"CameraTest_TrackingFailed": "Sikertelen követés bekapcsolt kamerával",
 	"CameraTest_Success": "Sikeres kamerateszt",
-	"CameraTest": "Camera Test",
+	"CameraTest": "Kamerateszt",
 	"CameraTestStatus_Evaluating": "Ellenőrzés",
 	"CameraTestStatus_Success": "Sikeres",
 	"CameraTestStatus_Failure": "Sikertelen",
@@ -275,35 +279,35 @@
 	"CameraRoomViewMode_VideoOpaque": "Nem átlátszó áteresztés",
 	"Settings_MustRestart_Description": "Néhány változtatás érvénybe lépéséhez újra kell indítani a SteamVR-t.",
 	"Settings_MustRestart_RestartSteamVR_Button": "SteamVR újraindítása",
-	"Settings_MustQuitApp_Description": "Please quit the current game for changes to take effect.",
-	"Settings_MustQuitApp_QuitCurrentGame_Button": "Quit Game",
-	"Settings_NotSupported": "Not Supported",
-	"Settings_AdvancedSettings": "Advanced Settings",
-	"Settings_Show": "Show",
-	"Settings_Hide": "Hide",
-	"Settings_ViveTracker": "Vive Tracker",
-	"Settings_ViveTrackers": "Vive Trackers",
-	"Settings_ViveTracker_Role": "Tracker Role",
-	"Settings_ViveTracker_Hand": "Hand",
-	"Settings_ViveTracker_Identify_NotConnected": "Vive Tracker isn't connected.",
-	"Settings_ViveTracker_Identify_NotIdentifiable": "Vive Tracker isn't capable of identification.",
-	"Settings_ViveTracker_Connected": "Connected",
-	"Settings_ViveTracker_Disconnected": "Disconnected",
-	"Settings_PerApplication_VideoSettings": "Per-Application Video Settings",
-	"Settings_ChooseStartupOverlayApps": "Choose Startup Overlay Apps",
-	"Settings_StartTheseOverlayAppsOnLaunch": "Start These Overlay Apps On Launch:",
-	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "No Overlay Apps were found",
-	"Settings_ActiveController": "Active Controller",
-	"Settings_EditBinding": "Edit This Binding",
-	"Settings_EditBinding_ChooseAnother": "Choose Another",
-	"Settings_ShowOldBindingUI": "Show Old Binding UI",
-	"Settings_ManageVideoSettingsForApp": "Manage Video Settings For:",
-	"Settings_ManageControllerBindingSettingsForApp": "Manage Controller Bindings For:",
-	"Settings_ActiveControllerBinding": "Active Controller Binding",
-	"Settings_ActiveBinding": "Active Binding",
+	"Settings_MustQuitApp_Description": "A változások életbe lépéséhez kérjük, lépj ki a játékból.",
+	"Settings_MustQuitApp_QuitCurrentGame_Button": "Kilépés a játékból",
+	"Settings_NotSupported": "Nem támogatott",
+	"Settings_AdvancedSettings": "Haladó beállítások",
+	"Settings_Show": "Mutatás",
+	"Settings_Hide": "Elrejtés",
+	"Settings_ViveTracker": "Vive követő",
+	"Settings_ViveTrackers": "Vive követők",
+	"Settings_ViveTracker_Role": "Követő szerepe",
+	"Settings_ViveTracker_Hand": "Kéz",
+	"Settings_ViveTracker_Identify_NotConnected": "Nincs Vive követő csatlakoztatva.",
+	"Settings_ViveTracker_Identify_NotIdentifiable": "A Vive követő nem képes azonosításra.",
+	"Settings_ViveTracker_Connected": "Csatlakoztatva",
+	"Settings_ViveTracker_Disconnected": "Leválasztva",
+	"Settings_PerApplication_VideoSettings": "Alkalmazásonkénti képbeállítások",
+	"Settings_ChooseStartupOverlayApps": "Induláskori átfedés-alkalmazások kiválasztása",
+	"Settings_StartTheseOverlayAppsOnLaunch": "Ezen átfedés-alkalmazások indítása induláskor:",
+	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "Nem található átfedés-alkalmazás.",
+	"Settings_ActiveController": "Aktív játékvezérlő",
+	"Settings_EditBinding": "E kiosztás szerkesztése",
+	"Settings_EditBinding_ChooseAnother": "Másik választása",
+	"Settings_ShowOldBindingUI": "Régi kiosztási kezelőfelület mutatása",
+	"Settings_ManageVideoSettingsForApp": "Képbeállítások kezelése ehhez:",
+	"Settings_ManageControllerBindingSettingsForApp": "Játékvezérlő-kiosztás kezelése ehhez:",
+	"Settings_ActiveControllerBinding": "Aktív játékvezérlő-kiosztás",
+	"Settings_ActiveBinding": "Aktív kiosztás",
 	"Settings_ShowThumbstickSettings": "Botkormány-beállítások szerkesztése",
 	"Settings_ThumbstickSettings": "Botkormány-beállítások",
-	"Settings_Number_Selected": "%1$s Selected",
-	"TestControllerTitle": "Testing Controller %1$s",
-	"TestController_NoController": "Turn on a controller to test it."
+	"Settings_Number_Selected": "%1$s kiválasztva",
+	"TestControllerTitle": "%1$s játékvezérlő tesztelése",
+	"TestController_NoController": "A teszteléshez kapcsolj be egy játékvezérlőt."
 }
