--- a/resources/webinterface/dashboard/localization/vrmonitor_italian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_italian.json
@@ -13,9 +13,9 @@
 	"Settings_Controller_CustomBinding": "Personalizzata",
 	"Settings_ThumbstickDeadzone_Text": "Zona morta levette",
 	"Settings_ThumbstickDeadzone_Desc": "Regola la zona morta su tutte le levette.",
-	"Settings_DominantHand": "Dominant Hand",
-	"Settings_DominantHand_Left": "Left",
-	"Settings_DominantHand_Right": "Right",
+	"Settings_DominantHand": "Mano preferita",
+	"Settings_DominantHand_Left": "Sinistra",
+	"Settings_DominantHand_Right": "Destra",
 	"Settings_Loading_CurrentBinding": "Caricamento associazioni correnti...",
 	"Settings_NeedSteamTo_ViewAndEditBindings": "Avvia Steam per visualizzare e modificare le assegnazioni.",
 	"VRMonitor_Overview_SystemStatus_Title": "Stato del sistema",
@@ -51,7 +51,8 @@
 	"Settings_Audio_Headset": "Visore",
 	"Settings_Audio_Manual": "Manuale",
 	"Settings_Audio_Mirroring_Label": "Duplicazione dell'audio",
-	"Settings_Audio_Default": "System Default",
+	"Settings_Audio_Mirroring_Independent_Volume_Label": "Il volume del mirroring dell'audio si regola separatamente (beta)",
+	"Settings_Audio_Default": "Impostazione predefinita",
 	"Settings_Audio_Current_Setting_Unknown": "(Il dispositivo selezionato non è presente)",
 	"Settings_Audio_HDMIGain": "Riduzione del guadagno sull'audio HDMI VIVE",
 	"Settings_SectionTitle_Advanced": "Avanzate",
@@ -92,16 +93,16 @@
 	"Settings_Advanced_Paths_Header": "Percorsi",
 	"Settings_Advanced_Reset_Header": "Ripristina",
 	"Settings_Advanced_Status_Header": "Verifica dello stato",
-	"Settings_ShowSettingsInDashboard": "Show Settings Tab",
-	"Settings_ShowPowerMenu": "Show Power Options",
-	"Settings_AllowAppQuitting": "Allow App Quitting From Dashboard",
-	"Settings_ShowDesktopViews": "Show Desktop Tabs",
+	"Settings_ShowSettingsInDashboard": "Mostra la scheda Impostazioni",
+	"Settings_ShowPowerMenu": "Mostra le Opzioni risparmio energia",
+	"Settings_AllowAppQuitting": "Consenti la chiusura dell'app dalla dashboard",
+	"Settings_ShowDesktopViews": "Mostra schede del desktop",
 	"Settings_CheckForSteam": "Controllo per Steam",
 	"Settings_DebugInputBindings": "Abilita le opzioni di debug nell'interfaccia di configurazione dei pulsanti",
-	"Advanced_GlobalActionSetPriority": "Enable global input from overlays (Experimental)",
+	"Advanced_GlobalActionSetPriority": "Abilita input globale dall'overlay (sperimentale)",
 	"Settings_FadeToGrid": "Passa alla griglia quando l'applicazione si blocca",
-	"Settings_EnableDashboard": "VR Dashboard on System Button",
-	"Settings_EnableDashboardDesc": "Allow the VR Dashboard to be summoned in response to a system button press.",
+	"Settings_EnableDashboard": "Dashboard VR sul pulsante Sistema",
+	"Settings_EnableDashboardDesc": "Consenti la visualizzazione della dashboard VR in risposta a una pressione del pulsante Sistema.",
 	"Settings_HomeAppCheck": "SteamVR Home",
 	"Settings_HomeAppDesc": "Scopri ambienti virtuali, funzionalità social e molto altro.",
 	"Settings_LargeSpace": "Spazio grande",
@@ -109,6 +110,9 @@
 	"Settings_LockedModeDesc": "Consenti la riproduzione sul visore mentre il computer è bloccato.",
 	"Settings_PauseOnStandby": "Sospendi VR mentre il visore è inattivo",
 	"Settings_PauseOnLocked": "Sospendi VR mentre il computer è bloccato",
+	"Settings_OverlayRenderQuality": "Qualità di rendering dell'Overlay",
+	"Settings_High": "Alta",
+	"Settings_Low": "Bassa",
 	"Settings_MediumSpace": "Spazio medio",
 	"Settings_NightModeCheck": "Modalità notturna",
 	"Settings_NightModeDesc": "Riduci la luminosità del visore fino alle 5 del mattino (oppure fino al riavvio di SteamVR).",
@@ -173,7 +177,7 @@
 	"Settings_PerApplication_Reprojection_Header": "Riproiezione",
 	"Settings_PerApplication_Reprojection_Checkbox": "Usa la modalità di riproiezione originale",
 	"Settings_PerApplication_Reprojection_Description": "Quando questa opzione è selezionata, disabilita la riproiezione asincrona per questo titolo.",
-	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Refresh Rate Override",
+	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Sostituisci frequenza di aggiornamento",
 	"Settings_Perapplication_RefreshRateOverride_Description": "Attivare questa opzione consentirà di specificare una frequenza di aggiornamento diversa da quella predefinita per questa applicazione.",
 	"Settings_MimeTypes_Pancake_Header": "Seleziona un'applicazione per avviare le applicazioni 2D",
 	"Settings_Camera_EnableCamera": "Attiva la telecamera",
@@ -212,7 +216,7 @@
 	"Settings_General_Cancel": "Annulla",
 	"Settings_General_Confirm": "Conferma",
 	"Settings_General_Close": "Chiudi",
-	"Settings_General_CalibrateThumbstick": "Calibrate Thumbstick",
+	"Settings_General_CalibrateThumbstick": "Calibra levetta",
 	"Settings_General_CalibrateThumbstick_ConnectAController": "Collega un controller a una levetta.",
 	"Settings_General_NotEnoughSamples": "Premi la levetta almeno altre %1$s volte per completare la calibrazione.",
 	"Settings_General_InviteMoreSamples": "Calcolato un angolo di %1$s°. Continua a premere verso l'alto per perfezionare questo valore o premi \"Conferma\" per accettare la calibrazione.",
@@ -223,13 +227,13 @@
 	"Settings_Dashboard_ShowProgressIndicator": "Indicatore del progresso per pressioni lunghe",
 	"Settings_Dashboard_Position": "Posizione dashboard",
 	"Settings_Classic": "Classica",
-	"Settings_Near": "Near",
-	"Settings_Middle": "Middle",
+	"Settings_Near": "Vicino",
+	"Settings_Middle": "Centro",
 	"Settings_DesktopScale": "Scala del desktop",
 	"Settings_DashboardScale": "Scala dashboard",
-	"Settings_DesktopDarkMode": "Desktop Dark Mode",
-	"Settings_ToggleDarkMode": "Toggle Dark Mode",
-	"Settings_Dark": "Dark",
+	"Settings_DesktopDarkMode": "Modalità scura per il desktop",
+	"Settings_ToggleDarkMode": "Attiva/disattiva modalità scura",
+	"Settings_Dark": "Scuro",
 	"SettingsTime_5s": "5 secondi",
 	"SettingsTime_30s": "30 secondi",
 	"SettingsTime_1m": "1 minuto",
@@ -264,7 +268,7 @@
 	"CameraTest_CameraFailed": "Comunicazione con la telecamera non riuscita",
 	"CameraTest_TrackingFailed": "Tracciamento non riuscito con la telecamera abilitata",
 	"CameraTest_Success": "Test telecamera superato",
-	"CameraTest": "Camera Test",
+	"CameraTest": "Prova telecamera",
 	"CameraTestStatus_Evaluating": "Verifica in corso",
 	"CameraTestStatus_Success": "Operazione riuscita",
 	"CameraTestStatus_Failure": "Operazione non riuscita",
@@ -275,8 +279,8 @@
 	"CameraRoomViewMode_VideoOpaque": "Visuale opaca",
 	"Settings_MustRestart_Description": "Riavvia SteamVR per applicare le modifiche.",
 	"Settings_MustRestart_RestartSteamVR_Button": "Riavvia SteamVR",
-	"Settings_MustQuitApp_Description": "Please quit the current game for changes to take effect.",
-	"Settings_MustQuitApp_QuitCurrentGame_Button": "Quit Game",
+	"Settings_MustQuitApp_Description": "Esci dal gioco in esecuzione affinché le modifiche abbiano effetto.",
+	"Settings_MustQuitApp_QuitCurrentGame_Button": "Esci dal gioco",
 	"Settings_NotSupported": "Non supportato",
 	"Settings_AdvancedSettings": "Impostazioni avanzate",
 	"Settings_Show": "Mostra",
