--- a/resources/webinterface/dashboard/localization/vrmonitor_norwegian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_norwegian.json
@@ -13,9 +13,9 @@
 	"Settings_Controller_CustomBinding": "Tilpasset",
 	"Settings_ThumbstickDeadzone_Text": "Styrespakens dødsone",
 	"Settings_ThumbstickDeadzone_Desc": "Juster dødsonen på alle styrespakene.",
-	"Settings_DominantHand": "Dominant Hand",
-	"Settings_DominantHand_Left": "Left",
-	"Settings_DominantHand_Right": "Right",
+	"Settings_DominantHand": "Dominant hånd",
+	"Settings_DominantHand_Left": "Venstre",
+	"Settings_DominantHand_Right": "Høyre",
 	"Settings_Loading_CurrentBinding": "Laster inn gjeldende binding...",
 	"Settings_NeedSteamTo_ViewAndEditBindings": "Start Steam for å se og redigere bindinger.",
 	"VRMonitor_Overview_SystemStatus_Title": "Systemstatus",
@@ -51,12 +51,13 @@
 	"Settings_Audio_Headset": "Hodesett",
 	"Settings_Audio_Manual": "Manuelt",
 	"Settings_Audio_Mirroring_Label": "Lydspeiling",
-	"Settings_Audio_Default": "System Default",
+	"Settings_Audio_Mirroring_Independent_Volume_Label": "Lydspeiling har egen lydstyrkeglidebryter (beta)",
+	"Settings_Audio_Default": "Systemstandard",
 	"Settings_Audio_Current_Setting_Unknown": "(Valgt enhet er utilgjengelig)",
 	"Settings_Audio_HDMIGain": "Forsterkningsreduksjon på VIVE HDMI-lyd",
 	"Settings_SectionTitle_Advanced": "Avansert",
 	"Settings_SectionTitle_Developer": "Utvikler",
-	"Settings_SectionTitle_Dashboard": "Dashboard",
+	"Settings_SectionTitle_Dashboard": "Dashbord",
 	"Settings_SectionTitle_General": "Generelt",
 	"Settings_SectionTitle_Applications": "Programmer",
 	"Settings_SectionTitle_Audio": "Lyd",
@@ -92,16 +93,16 @@
 	"Settings_Advanced_Paths_Header": "Stier",
 	"Settings_Advanced_Reset_Header": "Tilbakestill",
 	"Settings_Advanced_Status_Header": "Statussjekk",
-	"Settings_ShowSettingsInDashboard": "Show Settings Tab",
-	"Settings_ShowPowerMenu": "Show Power Options",
-	"Settings_AllowAppQuitting": "Allow App Quitting From Dashboard",
-	"Settings_ShowDesktopViews": "Show Desktop Tabs",
+	"Settings_ShowSettingsInDashboard": "Vis innstillingsfanen",
+	"Settings_ShowPowerMenu": "Vis strømalternativer",
+	"Settings_AllowAppQuitting": "Tillat å avslutte app fra dashbordet",
+	"Settings_ShowDesktopViews": "Vis skrivebordsfaner",
 	"Settings_CheckForSteam": "Sjekk etter Steam",
 	"Settings_DebugInputBindings": "Slå på feilsøkingsalternativer i grensesnittet for inndatabinding",
-	"Advanced_GlobalActionSetPriority": "Enable global input from overlays (Experimental)",
+	"Advanced_GlobalActionSetPriority": "Slå på global inndata fra overlegg (eksperimentell)",
 	"Settings_FadeToGrid": "Skift til rutenett når programmet ikke svarer",
-	"Settings_EnableDashboard": "VR Dashboard on System Button",
-	"Settings_EnableDashboardDesc": "Allow the VR Dashboard to be summoned in response to a system button press.",
+	"Settings_EnableDashboard": "VR-dashbord ved systemknapp",
+	"Settings_EnableDashboardDesc": "Tillat at VR-dashbordet åpnes når det trykkes på en systemknapp.",
 	"Settings_HomeAppCheck": "SteamVR Home",
 	"Settings_HomeAppDesc": "Dra nytte av virtuelle omgivelser, sosiale funksjoner og mer.",
 	"Settings_LargeSpace": "Stort område",
@@ -109,6 +110,9 @@
 	"Settings_LockedModeDesc": "Tillat gjengivelse til hodesettet mens datamaskinen er låst.",
 	"Settings_PauseOnStandby": "Sett VR på pause når hodesettet er uvirksomt",
 	"Settings_PauseOnLocked": "Sett VR på pause når datamaskinen er låst",
+	"Settings_OverlayRenderQuality": "Gjengivelseskvalitet på overlegg",
+	"Settings_High": "Høy",
+	"Settings_Low": "Lav",
 	"Settings_MediumSpace": "Middels område",
 	"Settings_NightModeCheck": "Nattmodus",
 	"Settings_NightModeDesc": "Demp lyset i hodesettet frem til kl. 05.00 (eller frem til SteamVR startes på nytt).",
@@ -173,7 +177,7 @@
 	"Settings_PerApplication_Reprojection_Header": "Omprojeksjon",
 	"Settings_PerApplication_Reprojection_Checkbox": "Bruk klassisk omprojeksjon",
 	"Settings_PerApplication_Reprojection_Description": "Hvis du velger dette alternativet, slås asynkron omprojeksjon av for dette produktet.",
-	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Refresh Rate Override",
+	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Overstyr oppdateringsfrekvens",
 	"Settings_Perapplication_RefreshRateOverride_Description": "Hvis du velger dette alternativet, kan du angi en annen oppdateringsfrekvens for dette programmet enn den globale innstillingen.",
 	"Settings_MimeTypes_Pancake_Header": "Velg et program som 2D-programmer skal startes i",
 	"Settings_Camera_EnableCamera": "Slå på kamera",
@@ -212,7 +216,7 @@
 	"Settings_General_Cancel": "Avbryt",
 	"Settings_General_Confirm": "Bekreft",
 	"Settings_General_Close": "Lukk",
-	"Settings_General_CalibrateThumbstick": "Calibrate Thumbstick",
+	"Settings_General_CalibrateThumbstick": "Kalibrer styrespak",
 	"Settings_General_CalibrateThumbstick_ConnectAController": "Koble til en kontroller som har en styrespak.",
 	"Settings_General_NotEnoughSamples": "Skyv styrespaken opp minst %1$s ganger til for å gjennomføre kalibreringen.",
 	"Settings_General_InviteMoreSamples": "Beregnet en vinkel på %1$s°. Skyv opp flere ganger for å finjustere verdien eller trykk bekreft for å godta kalibreringen.",
@@ -223,13 +227,13 @@
 	"Settings_Dashboard_ShowProgressIndicator": "Fremdriftsindikator ved langt trykk",
 	"Settings_Dashboard_Position": "Plassering av dashbord",
 	"Settings_Classic": "Klassisk",
-	"Settings_Near": "Near",
-	"Settings_Middle": "Middle",
+	"Settings_Near": "Nær",
+	"Settings_Middle": "I midten",
 	"Settings_DesktopScale": "Skrivebordsskalering",
 	"Settings_DashboardScale": "Dashbordskalering",
-	"Settings_DesktopDarkMode": "Desktop Dark Mode",
-	"Settings_ToggleDarkMode": "Toggle Dark Mode",
-	"Settings_Dark": "Dark",
+	"Settings_DesktopDarkMode": "Mørk skrivebordsmodus",
+	"Settings_ToggleDarkMode": "Slå av/på mørk modus",
+	"Settings_Dark": "Mørk",
 	"SettingsTime_5s": "5 sekunder",
 	"SettingsTime_30s": "30 sekunder",
 	"SettingsTime_1m": "1 minutt",
@@ -264,7 +268,7 @@
 	"CameraTest_CameraFailed": "Kamerakommunikasjon mislyktes",
 	"CameraTest_TrackingFailed": "Sporing mislyktes med kameraet aktivert",
 	"CameraTest_Success": "Kameratest bestått",
-	"CameraTest": "Camera Test",
+	"CameraTest": "Kameratest",
 	"CameraTestStatus_Evaluating": "Sjekker",
 	"CameraTestStatus_Success": "Vellykket",
 	"CameraTestStatus_Failure": "Mislyktes",
@@ -275,8 +279,8 @@
 	"CameraRoomViewMode_VideoOpaque": "Ugjennomsiktig overgang",
 	"Settings_MustRestart_Description": "SteamVR må startes på nytt før visse endringer trer i kraft.",
 	"Settings_MustRestart_RestartSteamVR_Button": "Start SteamVR på nytt",
-	"Settings_MustQuitApp_Description": "Please quit the current game for changes to take effect.",
-	"Settings_MustQuitApp_QuitCurrentGame_Button": "Quit Game",
+	"Settings_MustQuitApp_Description": "Det gjeldende spillet må avsluttes før endringer trer i kraft.",
+	"Settings_MustQuitApp_QuitCurrentGame_Button": "Avslutt spill",
 	"Settings_NotSupported": "Støttes ikke",
 	"Settings_AdvancedSettings": "Avanserte innstillinger",
 	"Settings_Show": "Vis",
