--- a/resources/webinterface/dashboard/localization/vrmonitor_polish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_polish.json
@@ -10,12 +10,12 @@
 	"Settings_Controller_AdvancedControllerSettings": "Zarządzaj konfiguracją kontrolera",
 	"Settings_Controller_ControllerBindingPrompt": "Konfiguracja kontrolera",
 	"Settings_Controller_DefaultBinding": "Domyślna",
-	"Settings_Controller_CustomBinding": "Niestandardowa",
+	"Settings_Controller_CustomBinding": "Własna",
 	"Settings_ThumbstickDeadzone_Text": "Martwa strefa drążka",
 	"Settings_ThumbstickDeadzone_Desc": "Dostosuj martwe strefy dla wszystkich drążków.",
-	"Settings_DominantHand": "Dominant Hand",
-	"Settings_DominantHand_Left": "Left",
-	"Settings_DominantHand_Right": "Right",
+	"Settings_DominantHand": "Dominująca ręka",
+	"Settings_DominantHand_Left": "Lewa",
+	"Settings_DominantHand_Right": "Prawa",
 	"Settings_Loading_CurrentBinding": "Wczytywanie bieżącej konfiguracji...",
 	"Settings_NeedSteamTo_ViewAndEditBindings": "Uruchom Steam, aby zobaczyć i edytować konfiguracje.",
 	"VRMonitor_Overview_SystemStatus_Title": "Stan systemu",
@@ -51,12 +51,13 @@
 	"Settings_Audio_Headset": "Gogle",
 	"Settings_Audio_Manual": "Ręczne",
 	"Settings_Audio_Mirroring_Label": "Duplikacja audio",
-	"Settings_Audio_Default": "System Default",
+	"Settings_Audio_Mirroring_Independent_Volume_Label": "Duplikacja dźwięku używa niezależnego suwaka głośności (beta)",
+	"Settings_Audio_Default": "Domyślne systemowe",
 	"Settings_Audio_Current_Setting_Unknown": "(obecnie wybrane urządzenie nie jest obecne)",
 	"Settings_Audio_HDMIGain": "Redukcja wzmocnienia sygnału wyjściowego VIVE HDMI Audio",
 	"Settings_SectionTitle_Advanced": "Zaawansowane",
 	"Settings_SectionTitle_Developer": "Programistyczne",
-	"Settings_SectionTitle_Dashboard": "Dashboard",
+	"Settings_SectionTitle_Dashboard": "Panel główny",
 	"Settings_SectionTitle_General": "Ogólne",
 	"Settings_SectionTitle_Applications": "Aplikacje",
 	"Settings_SectionTitle_Audio": "Dźwięk",
@@ -71,8 +72,8 @@
 	"Settings_SectionTitle_Controller": "Kontrolery",
 	"Advanced_AllowSavingOfTimingInfo": "Pozwalaj zapisywać informacje o czasach",
 	"Advanced_AutoSaveTimingInfoOnExit": "Zapisz automatycznie informacje o czasach przy zamykaniu",
-	"Settings_EnableWebHelperDebugger": "Włącz debugowanie Web Helpera",
-	"Settings_EnableWebHelperDebuggerDesc": "Włącza serwer debugowania w celu dołączenia narzędzi deweloperskich Chromium oraz debugera do osadzonych stron Chromium. Jest zawsze włączone na kompilacjach Perforce.",
+	"Settings_EnableWebHelperDebugger": "Włącz debugger Web Helpera",
+	"Settings_EnableWebHelperDebuggerDesc": "Włącza serwer debugowania w celu dołączenia narzędzi deweloperskich Chromium oraz debuggera do osadzonych stron Chromium. Jest zawsze włączone na kompilacjach Perforce.",
 	"Advanced_PerfGraphInHMD": "Pokaż wykres wydajności GPU w goglach",
 	"Advanced_SaveFrameDataNow": "Zapisz dane o klatkach",
 	"Explanation_DisableEnhancedPowerManagement": "Wyłącz Zaawansowane ustawienia zasilania systemu Windows dla urządzeń USB SteamVR, jeżeli doświadczasz niecodziennej utraty możliwości śledzenia lub nie możesz sparować bezprzewodowych kontrolerów. ",
@@ -92,16 +93,16 @@
 	"Settings_Advanced_Paths_Header": "Ścieżki",
 	"Settings_Advanced_Reset_Header": "Zresetuj",
 	"Settings_Advanced_Status_Header": "Sprawdzenie stanu",
-	"Settings_ShowSettingsInDashboard": "Show Settings Tab",
-	"Settings_ShowPowerMenu": "Show Power Options",
-	"Settings_AllowAppQuitting": "Allow App Quitting From Dashboard",
-	"Settings_ShowDesktopViews": "Show Desktop Tabs",
+	"Settings_ShowSettingsInDashboard": "Pokaż kartę ustawień",
+	"Settings_ShowPowerMenu": "Pokaż opcje zasilania",
+	"Settings_AllowAppQuitting": "Zezwalaj na wyłączanie aplikacji z panelu głównego",
+	"Settings_ShowDesktopViews": "Pokaz zakładki pulpitu",
 	"Settings_CheckForSteam": "Sprawdź obecność Steam",
 	"Settings_DebugInputBindings": "Włącz opcje debugowania w interfejsie użytkownika dot. przypisywania danych wejściowych",
-	"Advanced_GlobalActionSetPriority": "Enable global input from overlays (Experimental)",
+	"Advanced_GlobalActionSetPriority": "Włącz globalne wprowadzanie z nakładek (eksperymentalne)",
 	"Settings_FadeToGrid": "Zanikaj do siatki, gdy aplikacja się zawiesza",
-	"Settings_EnableDashboard": "VR Dashboard on System Button",
-	"Settings_EnableDashboardDesc": "Allow the VR Dashboard to be summoned in response to a system button press.",
+	"Settings_EnableDashboard": "Panel główny VR na przycisku System",
+	"Settings_EnableDashboardDesc": "Zezwalaj panelowi głównemu VR na bycie wywoływanym po wciśnięciu przycisku System.",
 	"Settings_HomeAppCheck": "SteamVR Home",
 	"Settings_HomeAppDesc": "Korzystaj z wirtualnych środowisk, funkcji społecznościowych i wielu więcej.",
 	"Settings_LargeSpace": "Duża przestrzeń",
@@ -109,6 +110,9 @@
 	"Settings_LockedModeDesc": "Zezwalaj na renderowanie do gogli, gdy komputer jest zablokowany.",
 	"Settings_PauseOnStandby": "Wstrzymaj VR, gdy gogle są w stanie bezczynności",
 	"Settings_PauseOnLocked": "Wstrzymaj VR, gdy komputer jest zablokowany",
+	"Settings_OverlayRenderQuality": "Jakość renderowania nakładki",
+	"Settings_High": "Wysoka",
+	"Settings_Low": "Niska",
 	"Settings_MediumSpace": "Średnia przestrzeń",
 	"Settings_NightModeCheck": "Tryb nocny",
 	"Settings_NightModeDesc": "Przyciemnij gogle do 5:00 (lub do chwili restartu SteamVR).",
@@ -144,8 +148,8 @@
 	"Settings_Advanced_MotionSmoothing_Description": "Syntezuje nowe klatki, by wciąż dobrze korzystało się z aplikacji, nawet jeżeli nie potrafi ona nadążyć.",
 	"Settings_Advanced_MotionSmoothing_Disabled": "Wygładzanie ruchu nie jest obsługiwane na tej karcie graficznej/wersji sterownika (wymaga obsługi asynchronicznej reprojekcji).",
 	"Settings_Advanced_MotionSmoothing_Disabled_Win7": "Wygładzanie ruchu nie jest obsługiwane na starszych wersjach systemu Windows.",
-	"Settings_Advanced_Supersampling_Auto": "Automatyczne",
-	"Settings_Advanced_Supersampling_Custom": "Niestandardowe",
+	"Settings_Advanced_Supersampling_Auto": "Auto",
+	"Settings_Advanced_Supersampling_Custom": "Własna",
 	"Settings_Advanced_Supersampling_Header": "Rozdzielczość renderowania",
 	"Settings_Advanced_Supersampling_Warning": "Poniższe ustawienie nadpisuje automatyczne ustawienia i wpływa na wszystkie aplikacje. Aby zmienić rozdzielczość dla konkretnej aplikacji, odwiedź ustawienia aplikacji.",
 	"Settings_Advanced_Supersampling_WidthByHeight": "%1$s × %2$s",
@@ -173,7 +177,7 @@
 	"Settings_PerApplication_Reprojection_Header": "Reprojekcja",
 	"Settings_PerApplication_Reprojection_Checkbox": "Użyj historycznego trybu reprojekcji",
 	"Settings_PerApplication_Reprojection_Description": "Włączenie tej opcji wyłączy asynchroniczną reprojekcję dla tego tytułu.",
-	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Refresh Rate Override",
+	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Obejście częstotliwości odświeżania",
 	"Settings_Perapplication_RefreshRateOverride_Description": "Włączenie tej opcji umożliwi określanie dla tej aplikacji częstotliwości odświeżania innej od ustawienia globalnego.",
 	"Settings_MimeTypes_Pancake_Header": "Wybierz aplikację służącą do uruchamiania aplikacji 2D",
 	"Settings_Camera_EnableCamera": "Włącz kamerę",
@@ -212,7 +216,7 @@
 	"Settings_General_Cancel": "Anuluj",
 	"Settings_General_Confirm": "Potwierdź",
 	"Settings_General_Close": "Zamknij",
-	"Settings_General_CalibrateThumbstick": "Calibrate Thumbstick",
+	"Settings_General_CalibrateThumbstick": "Skalibruj drążek",
 	"Settings_General_CalibrateThumbstick_ConnectAController": "Połącz kontroler z drążkiem.",
 	"Settings_General_NotEnoughSamples": "Odchyl drążek do góry jeszcze przynajmniej %1$s razy, by ukończyć kalibrację.",
 	"Settings_General_InviteMoreSamples": "Obliczono kąt %1$s°. Odchylaj dalej drążek do góry, by poprawić tę wartość lub wciśnij „Potwierdź”, by zaakceptować tę kalibrację.",
@@ -223,13 +227,13 @@
 	"Settings_Dashboard_ShowProgressIndicator": "Wskaźnik postępu długiego wciśnięcia",
 	"Settings_Dashboard_Position": "Pozycja panelu głównego",
 	"Settings_Classic": "Klasyczna",
-	"Settings_Near": "Near",
-	"Settings_Middle": "Middle",
+	"Settings_Near": "Bliska",
+	"Settings_Middle": "Po środku",
 	"Settings_DesktopScale": "Skala pulpitu",
 	"Settings_DashboardScale": "Skala panelu głównego",
-	"Settings_DesktopDarkMode": "Desktop Dark Mode",
-	"Settings_ToggleDarkMode": "Toggle Dark Mode",
-	"Settings_Dark": "Dark",
+	"Settings_DesktopDarkMode": "Tryb ciemny pulpitu",
+	"Settings_ToggleDarkMode": "Przełącz tryb ciemny",
+	"Settings_Dark": "Ciemny",
 	"SettingsTime_5s": "5 s",
 	"SettingsTime_30s": "30 s",
 	"SettingsTime_1m": "1 min",
@@ -264,7 +268,7 @@
 	"CameraTest_CameraFailed": "Błąd komunikacji z kamerą",
 	"CameraTest_TrackingFailed": "Błąd śledzenia z włączoną kamerą",
 	"CameraTest_Success": "Test kamery pomyślny",
-	"CameraTest": "Camera Test",
+	"CameraTest": "Test kamery",
 	"CameraTestStatus_Evaluating": "Sprawdzanie",
 	"CameraTestStatus_Success": "Sukces",
 	"CameraTestStatus_Failure": "Niepowodzenie",
@@ -275,8 +279,8 @@
 	"CameraRoomViewMode_VideoOpaque": "Nieprzejrzyste przejście",
 	"Settings_MustRestart_Description": "SteamVR musi zostać zrestartowany, by niektóre zmiany mogły zostać wprowadzone.",
 	"Settings_MustRestart_RestartSteamVR_Button": "Zrestartuj SteamVR",
-	"Settings_MustQuitApp_Description": "Please quit the current game for changes to take effect.",
-	"Settings_MustQuitApp_QuitCurrentGame_Button": "Quit Game",
+	"Settings_MustQuitApp_Description": "Wyjdź z obecnej gry, by zastosować zmiany.",
+	"Settings_MustQuitApp_QuitCurrentGame_Button": "Wyjdź z gry",
 	"Settings_NotSupported": "Brak obsługi",
 	"Settings_AdvancedSettings": "Ustawienia zaawansowane",
 	"Settings_Show": "Pokaż",
