--- a/resources/webinterface/dashboard/localization/vrmonitor_portuguese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_portuguese.json
@@ -10,12 +10,12 @@
 	"Settings_Controller_AdvancedControllerSettings": "Gerir controlos dos comandos",
 	"Settings_Controller_ControllerBindingPrompt": "Controlos do comando",
 	"Settings_Controller_DefaultBinding": "Padrão",
-	"Settings_Controller_CustomBinding": "Personalizado",
+	"Settings_Controller_CustomBinding": "Personal.",
 	"Settings_ThumbstickDeadzone_Text": "Zona morta dos manípulos",
 	"Settings_ThumbstickDeadzone_Desc": "Ajusta a zona morta de todos os manípulos.",
-	"Settings_DominantHand": "Dominant Hand",
-	"Settings_DominantHand_Left": "Left",
-	"Settings_DominantHand_Right": "Right",
+	"Settings_DominantHand": "Mão dominante",
+	"Settings_DominantHand_Left": "Esquerda",
+	"Settings_DominantHand_Right": "Direita",
 	"Settings_Loading_CurrentBinding": "A carregar configuração atual...",
 	"Settings_NeedSteamTo_ViewAndEditBindings": "Inicia o Steam para veres e editares os controlos.",
 	"VRMonitor_Overview_SystemStatus_Title": "Estado do sistema",
@@ -51,12 +51,13 @@
 	"Settings_Audio_Headset": "Headset",
 	"Settings_Audio_Manual": "Manual",
 	"Settings_Audio_Mirroring_Label": "Reencaminhamento de áudio",
-	"Settings_Audio_Default": "System Default",
+	"Settings_Audio_Mirroring_Independent_Volume_Label": "Áudio reencaminhado usa opções de volume separadas (Beta)",
+	"Settings_Audio_Default": "Predefinição do sistema",
 	"Settings_Audio_Current_Setting_Unknown": "(O dispositivo selecionado não está presente)",
 	"Settings_Audio_HDMIGain": "Redução de ganho no áudio HDMI do VIVE",
 	"Settings_SectionTitle_Advanced": "Avançado",
 	"Settings_SectionTitle_Developer": "Desenvolvedor",
-	"Settings_SectionTitle_Dashboard": "Dashboard",
+	"Settings_SectionTitle_Dashboard": "Painel",
 	"Settings_SectionTitle_General": "Geral",
 	"Settings_SectionTitle_Applications": "Aplicações",
 	"Settings_SectionTitle_Audio": "Áudio",
@@ -92,16 +93,16 @@
 	"Settings_Advanced_Paths_Header": "Diretórios",
 	"Settings_Advanced_Reset_Header": "Restaurar",
 	"Settings_Advanced_Status_Header": "Verificação do estado",
-	"Settings_ShowSettingsInDashboard": "Show Settings Tab",
-	"Settings_ShowPowerMenu": "Show Power Options",
-	"Settings_AllowAppQuitting": "Allow App Quitting From Dashboard",
-	"Settings_ShowDesktopViews": "Show Desktop Tabs",
+	"Settings_ShowSettingsInDashboard": "Mostrar separador de definições",
+	"Settings_ShowPowerMenu": "Mostrar opções de energia",
+	"Settings_AllowAppQuitting": "Permitir saída de apps a partir do Painel",
+	"Settings_ShowDesktopViews": "Mostrar separadores de ambiente de trabalho",
 	"Settings_CheckForSteam": "Procurar Steam",
 	"Settings_DebugInputBindings": "Ativar opções de debugging na interface de configuração de controlos",
-	"Advanced_GlobalActionSetPriority": "Enable global input from overlays (Experimental)",
+	"Advanced_GlobalActionSetPriority": "Permitir input global de interfaces (Experimental)",
 	"Settings_FadeToGrid": "Mostrar grelha se aplicação encravar",
-	"Settings_EnableDashboard": "VR Dashboard on System Button",
-	"Settings_EnableDashboardDesc": "Allow the VR Dashboard to be summoned in response to a system button press.",
+	"Settings_EnableDashboard": "Associar Painel de R.V. ao botão System",
+	"Settings_EnableDashboardDesc": "Faz com que o Painel de R.V. seja aberto ao pressionar o botão System.",
 	"Settings_HomeAppCheck": "SteamVR Home",
 	"Settings_HomeAppDesc": "Desfruta de ambientes virtuais, funcionalidades sociais e muito mais.",
 	"Settings_LargeSpace": "Espaço grande",
@@ -109,13 +110,16 @@
 	"Settings_LockedModeDesc": "Permitir renderização para o headset enquanto o computador estiver bloqueado.",
 	"Settings_PauseOnStandby": "Pausar R.V. se headset estiver inativo",
 	"Settings_PauseOnLocked": "Pausar R.V. enquanto o computer estiver bloqueado",
+	"Settings_OverlayRenderQuality": "Qualidade de renderização de interfaces",
+	"Settings_High": "Alta",
+	"Settings_Low": "Baixa",
 	"Settings_MediumSpace": "Espaço médio",
 	"Settings_NightModeCheck": "Modo noturno",
 	"Settings_NightModeDesc": "Reduz o brilho do headset até às 5:00 (ou até o SteamVR ser reiniciado).",
 	"Settings_ShowPlaylistMenu": "Ver menu de reprodução",
 	"Settings_SmallSpace": "Espaço pequeno",
 	"Settings_StatusWindowAlwaysOnTop_Info": " ",
-	"Settings_StatusWindowAlwaysOnTop_Text": "SteamVR sempre em primeiro plano",
+	"Settings_StatusWindowAlwaysOnTop_Text": "SteamVR sempre em 1.º plano",
 	"Settings_StatusWindowMinimizeToTray_Text": "Quando minimizado, colocar estado do SteamVR na área de notificação",
 	"Settings_SuppressWarnings_Text": "Suprimir avisos e alertas se estado do SteamVR estiver minimizado",
 	"StatusCheckInterval_Never": "Nunca",
@@ -144,8 +148,8 @@
 	"Settings_Advanced_MotionSmoothing_Description": "Sintetiza frames novas de forma a garantir uma boa experiência quando a aplicação em uso não consegue manter uma taxa de frames aceitável.",
 	"Settings_Advanced_MotionSmoothing_Disabled": "A suavização de movimento não é compatível com a versão deste driver/GPU (requer compatibilidade com reprojeção assíncrona).",
 	"Settings_Advanced_MotionSmoothing_Disabled_Win7": "A suavização de movimento é incompatível em versões mais antigas do Windows.",
-	"Settings_Advanced_Supersampling_Auto": "Automático",
-	"Settings_Advanced_Supersampling_Custom": "Personalizado",
+	"Settings_Advanced_Supersampling_Auto": "Autom.",
+	"Settings_Advanced_Supersampling_Custom": "Personal.",
 	"Settings_Advanced_Supersampling_Header": "Resolução de renderização",
 	"Settings_Advanced_Supersampling_Warning": "A definição abaixo irá substituir a definição automatizada e irá afetar todas as aplicações. Para alterares a resolução de uma aplicação específica, visita as definições de Aplicações.",
 	"Settings_Advanced_Supersampling_WidthByHeight": "%1$s × %2$s",
@@ -173,7 +177,7 @@
 	"Settings_PerApplication_Reprojection_Header": "Reprojeção",
 	"Settings_PerApplication_Reprojection_Checkbox": "Usar modo de reprojeção clássico",
 	"Settings_PerApplication_Reprojection_Description": "Marcar esta opção irá desativar a reprojeção assíncrona para este jogo.",
-	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Refresh Rate Override",
+	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Substituir taxa de atualização",
 	"Settings_Perapplication_RefreshRateOverride_Description": "Marcar esta opção permitirá especificar uma taxa de atualização diferente da definição global para esta aplicação.",
 	"Settings_MimeTypes_Pancake_Header": "Seleciona em qual aplicação iniciar aplicações 2D",
 	"Settings_Camera_EnableCamera": "Ativar câmara",
@@ -212,24 +216,24 @@
 	"Settings_General_Cancel": "Cancelar",
 	"Settings_General_Confirm": "Confirmar",
 	"Settings_General_Close": "Fechar",
-	"Settings_General_CalibrateThumbstick": "Calibrate Thumbstick",
+	"Settings_General_CalibrateThumbstick": "Calibrar manípulo",
 	"Settings_General_CalibrateThumbstick_ConnectAController": "Conecta um comando com um manípulo analógico.",
 	"Settings_General_NotEnoughSamples": "Pressiona o manípulo para cima mais %1$s vezes para completares a calibração.",
 	"Settings_General_InviteMoreSamples": "Foi calculado um ângulo de %1$s°. Continua a pressionar para cima para otimizares o valor ou confirma para aceitares esta calibração.",
 	"Settings_General_LeftThumbstickAngle": "Ângulo do manípulo esquerdo: %1$s°",
 	"Settings_General_RightThumbstickAngle": "Ângulo do manípulo direito: %1$s°",
-	"Settings_General_LeftThumbstickAngle_NoValue": "Ângulo do manípulo esquerdo",
-	"Settings_General_RightThumbstickAngle_NoValue": "Ângulo do manípulo direito",
+	"Settings_General_LeftThumbstickAngle_NoValue": "Ângulo do manípulo esq.",
+	"Settings_General_RightThumbstickAngle_NoValue": "Ângulo do manípulo dir.",
 	"Settings_Dashboard_ShowProgressIndicator": "Indicador de progresso de pressionar longo",
-	"Settings_Dashboard_Position": "Posição do painel principal",
+	"Settings_Dashboard_Position": "Posição do Painel",
 	"Settings_Classic": "Clássica",
-	"Settings_Near": "Near",
-	"Settings_Middle": "Middle",
+	"Settings_Near": "Perto",
+	"Settings_Middle": "Centro",
 	"Settings_DesktopScale": "Escala do ambiente de trabalho",
-	"Settings_DashboardScale": "Escala do painel principal",
-	"Settings_DesktopDarkMode": "Desktop Dark Mode",
-	"Settings_ToggleDarkMode": "Toggle Dark Mode",
-	"Settings_Dark": "Dark",
+	"Settings_DashboardScale": "Escala do Painel",
+	"Settings_DesktopDarkMode": "Modo Escuro do ambiente de trabalho",
+	"Settings_ToggleDarkMode": "Alternar Modo Escuro",
+	"Settings_Dark": "Escuro",
 	"SettingsTime_5s": "5 segundos",
 	"SettingsTime_30s": "30 segundos",
 	"SettingsTime_1m": "1 minuto",
@@ -251,7 +255,7 @@
 	"Settings_ConnectAnHMD": "Por favor, conecta um headset.",
 	"Settings_Loading": "A carregar...",
 	"Settings_ResetToDefault": "Usar predefinições",
-	"Settings_ResetPageToDefault": "Restaurar predefinições da página",
+	"Settings_ResetPageToDefault": "Restaurar predefinições",
 	"Settings_ToggleButton_On": "Ligado",
 	"Settings_ToggleButton_Off": "Desligado",
 	"Settings_ToggleButton_Disable": "Desativar",
@@ -264,7 +268,7 @@
 	"CameraTest_CameraFailed": "A comunicação com a câmara falhou",
 	"CameraTest_TrackingFailed": "A deteção com a câmara ativa falhou",
 	"CameraTest_Success": "Teste da câmara bem-sucedido",
-	"CameraTest": "Camera Test",
+	"CameraTest": "Teste da câmara",
 	"CameraTestStatus_Evaluating": "A verificar",
 	"CameraTestStatus_Success": "Sucesso",
 	"CameraTestStatus_Failure": "Falhou",
@@ -275,8 +279,8 @@
 	"CameraRoomViewMode_VideoOpaque": "Vista opaca",
 	"Settings_MustRestart_Description": "O SteamVR tem de ser reiniciado para que algumas alterações entrem em efeito.",
 	"Settings_MustRestart_RestartSteamVR_Button": "Reiniciar SteamVR",
-	"Settings_MustQuitApp_Description": "Please quit the current game for changes to take effect.",
-	"Settings_MustQuitApp_QuitCurrentGame_Button": "Quit Game",
+	"Settings_MustQuitApp_Description": "Por favor, sai do jogo atual para que as alterações entrem em efeito.",
+	"Settings_MustQuitApp_QuitCurrentGame_Button": "Sair do jogo",
 	"Settings_NotSupported": "Incompatível",
 	"Settings_AdvancedSettings": "Definições avançadas",
 	"Settings_Show": "Mostrar",
@@ -290,20 +294,20 @@
 	"Settings_ViveTracker_Connected": "Conectado",
 	"Settings_ViveTracker_Disconnected": "Desconectado",
 	"Settings_PerApplication_VideoSettings": "Definições de vídeo por aplicação",
-	"Settings_ChooseStartupOverlayApps": "Escolher aplicações de interface ao iniciar",
+	"Settings_ChooseStartupOverlayApps": "Apps de interface ao iniciar:",
 	"Settings_StartTheseOverlayAppsOnLaunch": "Abrir estas aplicações de interface ao iniciar:",
 	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "Nenhuma aplicação de interface encontrada",
 	"Settings_ActiveController": "Comando ativo",
 	"Settings_EditBinding": "Editar esta configuração",
-	"Settings_EditBinding_ChooseAnother": "Escolher outro",
+	"Settings_EditBinding_ChooseAnother": "Escolher outra",
 	"Settings_ShowOldBindingUI": "Mostrar interface de controlos antiga",
 	"Settings_ManageVideoSettingsForApp": "Gerir definições de vídeo para:",
 	"Settings_ManageControllerBindingSettingsForApp": "Gerir controlos para:",
-	"Settings_ActiveControllerBinding": "Configuração de controlos ativa",
+	"Settings_ActiveControllerBinding": "Configuração ativa",
 	"Settings_ActiveBinding": "Configuração ativa",
 	"Settings_ShowThumbstickSettings": "Editar definições de manípulos",
 	"Settings_ThumbstickSettings": "Definições de manípulos",
-	"Settings_Number_Selected": "Selecionados: %1$s",
-	"TestControllerTitle": "A testar o comando %1$s",
+	"Settings_Number_Selected": "Selecionadas: %1$s",
+	"TestControllerTitle": "A testar comando %1$s",
 	"TestController_NoController": "Liga um comando para testá-lo."
 }
