--- a/resources/webinterface/dashboard/localization/vrmonitor_romanian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_romanian.json
@@ -51,6 +51,7 @@
 	"Settings_Audio_Headset": "Headset",
 	"Settings_Audio_Manual": "Manual",
 	"Settings_Audio_Mirroring_Label": "Audio mirroring",
+	"Settings_Audio_Mirroring_Independent_Volume_Label": "Audio mirror uses independent volume slider (Beta)",
 	"Settings_Audio_Default": "System Default",
 	"Settings_Audio_Current_Setting_Unknown": "(Currently selected device is not present)",
 	"Settings_Audio_HDMIGain": "Gain reduction on VIVE HDMI Audio",
@@ -109,6 +110,9 @@
 	"Settings_LockedModeDesc": "Permite randarea către headset atunci când calculatorul este blocat.",
 	"Settings_PauseOnStandby": "Pause VR when headset is idle",
 	"Settings_PauseOnLocked": "Pause VR when computer is locked",
+	"Settings_OverlayRenderQuality": "Overlay Render Quality",
+	"Settings_High": "High",
+	"Settings_Low": "Low",
 	"Settings_MediumSpace": "Spațiu mediu",
 	"Settings_NightModeCheck": "Modul nocturn",
 	"Settings_NightModeDesc": "Redu luminozitatea headsetului până la ora 5:00 AM (sau până când SteamVR este repornit).",
@@ -290,7 +294,7 @@
 	"Settings_ViveTracker_Connected": "Connected",
 	"Settings_ViveTracker_Disconnected": "Disconnected",
 	"Settings_PerApplication_VideoSettings": "Per-Application Video Settings",
-	"Settings_ChooseStartupOverlayApps": "Choose Startup Overlay Apps",
+	"Settings_ChooseStartupOverlayApps": "Alege aplicațiie de suprapunere pentru pornire",
 	"Settings_StartTheseOverlayAppsOnLaunch": "Start These Overlay Apps On Launch:",
 	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "No Overlay Apps were found",
 	"Settings_ActiveController": "Active Controller",
