--- a/resources/webinterface/dashboard/localization/vrmonitor_spanish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_spanish.json
@@ -51,7 +51,8 @@
 	"Settings_Audio_Headset": "Visor",
 	"Settings_Audio_Manual": "Manual",
 	"Settings_Audio_Mirroring_Label": "Duplicación de audio",
-	"Settings_Audio_Default": "System Default",
+	"Settings_Audio_Mirroring_Independent_Volume_Label": "El audio duplicado utiliza un control de volumen independiente (beta)",
+	"Settings_Audio_Default": "Predeterminado del sistema",
 	"Settings_Audio_Current_Setting_Unknown": "(El dispositivo seleccionado actualmente no está presente)",
 	"Settings_Audio_HDMIGain": "Reducción de ganancia en el audio HDMI de VIVE",
 	"Settings_SectionTitle_Advanced": "Avanzado",
@@ -109,6 +110,9 @@
 	"Settings_LockedModeDesc": "Permitir la reproducción en el visor mientras el ordenador está bloqueado.",
 	"Settings_PauseOnStandby": "Detener la RV cuando el visor esté inactivo",
 	"Settings_PauseOnLocked": "Detener la RV cuando el ordenador esté bloqueado",
+	"Settings_OverlayRenderQuality": "Calidad de renderizado de la interfaz",
+	"Settings_High": "Alta",
+	"Settings_Low": "Baja",
 	"Settings_MediumSpace": "Espacio mediano",
 	"Settings_NightModeCheck": "Modo nocturno",
 	"Settings_NightModeDesc": "Atenuar el brillo del visor hasta las 5:00 a. m. (o hasta que se reinicie SteamVR).",
