--- a/resources/webinterface/dashboard/localization/vrmonitor_turkish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_turkish.json
@@ -51,6 +51,7 @@
 	"Settings_Audio_Headset": "Headset",
 	"Settings_Audio_Manual": "Manual",
 	"Settings_Audio_Mirroring_Label": "Audio mirroring",
+	"Settings_Audio_Mirroring_Independent_Volume_Label": "Audio mirror uses independent volume slider (Beta)",
 	"Settings_Audio_Default": "System Default",
 	"Settings_Audio_Current_Setting_Unknown": "(Currently selected device is not present)",
 	"Settings_Audio_HDMIGain": "Gain reduction on VIVE HDMI Audio",
@@ -109,6 +110,9 @@
 	"Settings_LockedModeDesc": "Bilgisayar kilitliyken başlığa görüntü işlenmesine izin ver.",
 	"Settings_PauseOnStandby": "Pause VR when headset is idle",
 	"Settings_PauseOnLocked": "Pause VR when computer is locked",
+	"Settings_OverlayRenderQuality": "Arayüzü İşleme Kalitesi",
+	"Settings_High": "Yüksek",
+	"Settings_Low": "Düşük",
 	"Settings_MediumSpace": "Orta Büyüklükteki Alan",
 	"Settings_NightModeCheck": "Gece Modu",
 	"Settings_NightModeDesc": "Başlık parlaklığını sabah 05:00'e (veya SteamVR yeniden başlatılana) kadar azaltır.",
@@ -227,8 +231,8 @@
 	"Settings_Middle": "Middle",
 	"Settings_DesktopScale": "Desktop Scale",
 	"Settings_DashboardScale": "Dashboard Scale",
-	"Settings_DesktopDarkMode": "Desktop Dark Mode",
-	"Settings_ToggleDarkMode": "Toggle Dark Mode",
+	"Settings_DesktopDarkMode": "Masaüstü Karanlık Modu",
+	"Settings_ToggleDarkMode": "Karanlık Modu Aç/Kapat",
 	"Settings_Dark": "Dark",
 	"SettingsTime_5s": "5 Saniye",
 	"SettingsTime_30s": "30 Saniye",
