--- a/resources/webinterface/dashboard/localization/vrmonitor_ukrainian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_ukrainian.json
@@ -13,9 +13,9 @@
 	"Settings_Controller_CustomBinding": "Персональна",
 	"Settings_ThumbstickDeadzone_Text": "Мертва зона стіка",
 	"Settings_ThumbstickDeadzone_Desc": "Налаштувати мертву зону для всіх стіків.",
-	"Settings_DominantHand": "Dominant Hand",
-	"Settings_DominantHand_Left": "Left",
-	"Settings_DominantHand_Right": "Right",
+	"Settings_DominantHand": "Основна рука",
+	"Settings_DominantHand_Left": "Ліва",
+	"Settings_DominantHand_Right": "Права",
 	"Settings_Loading_CurrentBinding": "Завантаження поточної розкладки…",
 	"Settings_NeedSteamTo_ViewAndEditBindings": "Запустіть Steam, щоб переглянути та відредагувати розкладки.",
 	"VRMonitor_Overview_SystemStatus_Title": "Стан системи",
@@ -51,12 +51,13 @@
 	"Settings_Audio_Headset": "Шолом",
 	"Settings_Audio_Manual": "Вручну",
 	"Settings_Audio_Mirroring_Label": "Дублювання звуку",
-	"Settings_Audio_Default": "System Default",
+	"Settings_Audio_Mirroring_Independent_Volume_Label": "Дублювання звуку має власний повзунок гучності (бета)",
+	"Settings_Audio_Default": "Стандарт системи",
 	"Settings_Audio_Current_Setting_Unknown": "(наразі вибраний пристрій відсутній)",
 	"Settings_Audio_HDMIGain": "Зниження посилення в аудіоінтерфейсі HDMI VIVE",
 	"Settings_SectionTitle_Advanced": "Розширені",
 	"Settings_SectionTitle_Developer": "Розробник",
-	"Settings_SectionTitle_Dashboard": "Dashboard",
+	"Settings_SectionTitle_Dashboard": "Панель навігації",
 	"Settings_SectionTitle_General": "Загальне",
 	"Settings_SectionTitle_Applications": "Застосунки",
 	"Settings_SectionTitle_Audio": "Звук",
@@ -92,16 +93,16 @@
 	"Settings_Advanced_Paths_Header": "Шляхи",
 	"Settings_Advanced_Reset_Header": "Скинути",
 	"Settings_Advanced_Status_Header": "Перевірка стану",
-	"Settings_ShowSettingsInDashboard": "Show Settings Tab",
-	"Settings_ShowPowerMenu": "Show Power Options",
-	"Settings_AllowAppQuitting": "Allow App Quitting From Dashboard",
-	"Settings_ShowDesktopViews": "Show Desktop Tabs",
+	"Settings_ShowSettingsInDashboard": "Показувати вкладку «Налаштування»",
+	"Settings_ShowPowerMenu": "Показати параметри живлення",
+	"Settings_AllowAppQuitting": "Дозволити застосункам виходити з панелі навігації",
+	"Settings_ShowDesktopViews": "Показувати вкладки робочого столу",
 	"Settings_CheckForSteam": "Перевіряти наявність Steam",
 	"Settings_DebugInputBindings": "Увімкнути опції відлагодження у вхідних призначеннях користувацького інтерфейсу",
-	"Advanced_GlobalActionSetPriority": "Enable global input from overlays (Experimental)",
+	"Advanced_GlobalActionSetPriority": "Увімкнути глобальне введення з оверлеїв (експериментально)",
 	"Settings_FadeToGrid": "Розчинятися із сіткою, коли застосунок зависає",
-	"Settings_EnableDashboard": "VR Dashboard on System Button",
-	"Settings_EnableDashboardDesc": "Allow the VR Dashboard to be summoned in response to a system button press.",
+	"Settings_EnableDashboard": "Панель навігації ВР на системній кнопці",
+	"Settings_EnableDashboardDesc": "Дозволити виклик панелі навігації ВР у відповідь на натискання системної кнопки.",
 	"Settings_HomeAppCheck": "Домівка SteamVR",
 	"Settings_HomeAppDesc": "Насолоджуйтеся віртуальним оточенням, соціальними функціями тощо.",
 	"Settings_LargeSpace": "Великий простір",
@@ -109,6 +110,9 @@
 	"Settings_LockedModeDesc": "Дозволити відтворення на шолом, поки комп’ютер заблоковано.",
 	"Settings_PauseOnStandby": "Призупиняти ВР, коли шолом бездіяльний",
 	"Settings_PauseOnLocked": "Призупиняти ВР, коли комп’ютер заблоковано",
+	"Settings_OverlayRenderQuality": "Якість рендерингу оверлею",
+	"Settings_High": "Висока",
+	"Settings_Low": "Низька",
 	"Settings_MediumSpace": "Середній простір",
 	"Settings_NightModeCheck": "Нічний режим",
 	"Settings_NightModeDesc": "Затемнює шолом до 5:00 (або до перезапуску SteamVR).",
@@ -173,7 +177,7 @@
 	"Settings_PerApplication_Reprojection_Header": "Репроекція",
 	"Settings_PerApplication_Reprojection_Checkbox": "Використовувати класичний режим репроекції",
 	"Settings_PerApplication_Reprojection_Description": "Вибір цього параметру вимкне асинхронну репроекцію для цього застосунку.",
-	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Refresh Rate Override",
+	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Перезапис частоти оновлення",
 	"Settings_Perapplication_RefreshRateOverride_Description": "Вибір цього параметра дозволить вказати іншу частоту оновлення у глобальних налаштуваннях для цього застосунку.",
 	"Settings_MimeTypes_Pancake_Header": "Оберіть застосунок, у якому слід запустити двомірний застосунок",
 	"Settings_Camera_EnableCamera": "Увімкнути камеру",
@@ -212,7 +216,7 @@
 	"Settings_General_Cancel": "Скасувати",
 	"Settings_General_Confirm": "Підтвердити",
 	"Settings_General_Close": "Закрити",
-	"Settings_General_CalibrateThumbstick": "Calibrate Thumbstick",
+	"Settings_General_CalibrateThumbstick": "Калібрувати джойстик",
 	"Settings_General_CalibrateThumbstick_ConnectAController": "Підключити контролер зі стіком.",
 	"Settings_General_NotEnoughSamples": "Будь ласка, натисніть на стік ще принаймні %1$s разів, щоби завершити калібрування.",
 	"Settings_General_InviteMoreSamples": "Розраховано кут %1$s°. Продовжуйте натискати догори, щоб уточнити це значення, або натисніть «Підтвердити», щоб прийняти це калібрування.",
@@ -222,14 +226,14 @@
 	"Settings_General_RightThumbstickAngle_NoValue": "Кут правого стіка",
 	"Settings_Dashboard_ShowProgressIndicator": "Індикатор прогресу для дій під час довгого натискання",
 	"Settings_Dashboard_Position": "Позиція панелі навігації",
-	"Settings_Classic": "Класичний",
-	"Settings_Near": "Near",
-	"Settings_Middle": "Middle",
-	"Settings_DesktopScale": "Шкала робочого стола",
+	"Settings_Classic": "Класично",
+	"Settings_Near": "Близько",
+	"Settings_Middle": "Середина",
+	"Settings_DesktopScale": "Розмір робочого стола",
 	"Settings_DashboardScale": "Розмір панелі навігації",
-	"Settings_DesktopDarkMode": "Desktop Dark Mode",
-	"Settings_ToggleDarkMode": "Toggle Dark Mode",
-	"Settings_Dark": "Dark",
+	"Settings_DesktopDarkMode": "Темний режим робочого стола",
+	"Settings_ToggleDarkMode": "Перемкнути темний режим",
+	"Settings_Dark": "Темно",
 	"SettingsTime_5s": "5 секунд",
 	"SettingsTime_30s": "30 секунд",
 	"SettingsTime_1m": "1 хвилину",
@@ -264,7 +268,7 @@
 	"CameraTest_CameraFailed": "Помилка з’єднання з камерою",
 	"CameraTest_TrackingFailed": "Помилка відстеження за допомогою увімкненої камери",
 	"CameraTest_Success": "Перевірка камери виконана успішно",
-	"CameraTest": "Camera Test",
+	"CameraTest": "Перевірка камери",
 	"CameraTestStatus_Evaluating": "Перевірка",
 	"CameraTestStatus_Success": "Готово",
 	"CameraTestStatus_Failure": "Помилка",
@@ -275,8 +279,8 @@
 	"CameraRoomViewMode_VideoOpaque": "Непрозоре ретранслювання",
 	"Settings_MustRestart_Description": "Для внесення змін потрібно перезапустити SteamVR.",
 	"Settings_MustRestart_RestartSteamVR_Button": "Перезапустити SteamVR",
-	"Settings_MustQuitApp_Description": "Please quit the current game for changes to take effect.",
-	"Settings_MustQuitApp_QuitCurrentGame_Button": "Quit Game",
+	"Settings_MustQuitApp_Description": "Будь ласка, вийдіть із поточної гри для внесення змін.",
+	"Settings_MustQuitApp_QuitCurrentGame_Button": "Вийти з гри",
 	"Settings_NotSupported": "Не підтримується",
 	"Settings_AdvancedSettings": "Розширені налаштування",
 	"Settings_Show": "Показати",
