--- a/resources/webinterface/dashboard/localization/bindingui_russian.json
+++ b/resources/webinterface/dashboard/localization/bindingui_russian.json
@@ -50,6 +50,8 @@
   "SourceInputMode_TouchInitialState": "Изначально касание кнопки уже состоялось:",
   "SourceInputMode_OverlapPercent": "Процент перекрытия:",
   "SourceInputMode_DeadzonePercent": "Процент мёртвой зоны:",
+  "SourceInputMode_Maxzone": "Процент макс. зоны:",
+  "SourceInputMode_Exponent": "Curve Exponent:",
   "SourceInputMode_StickyDpad": "Сохранять действие крестовины после активации",
   "SourceInputMode_LongPressDelay": "Задержка долгого нажатия:",
   "SourceInputMode_DoublePressDelay": "Задержка двойного нажатия:",
@@ -97,6 +99,7 @@
   "SourceInputMode_StickyClick_tooltip": "Keep thumbstick clicked while stick is deflected",
   "SourceInputMode_StickyClick_Activate_tooltip": "How much you have to deflect the stick to engage.",
   "SourceInputMode_StickyClick_Deactivate_tooltip": "How much you have to relax the stick for it to disengage.",
+  "SourceInputMode_TouchyClick_tooltip": "Keep button clicked as long as it's touched",
   "SourceInputMode_ButtonModeInputForce_Click_tooltip": "Optionally get the value for this from the force sensor (how much pressure is applied) or the capacitive sensor (how close a finger is).",
   "SourceInputMode_CapsenseEnableThreshold_tooltip": "At what point to enable the grab due to a finger being close to the grip.",
   "SourceInputMode_GrabThreshold_tooltip": "The combined activation thresholds for the capacitive sensor and the force sensor.",
@@ -204,6 +207,7 @@
   "SourceInputMode_StickyClick": "Keep thumbstick clicked while stick is deflected",
   "SourceInputMode_StickyClick_Activate": "Порог активации отклонения",
   "SourceInputMode_StickyClick_Deactivate": "Порог деактивации отклонения",
+  "SourceInputMode_TouchyClick": "Keep button clicked as long as it's touched",
   "SourceInputMode_ButtonModeInputForce_Click": "Сгенерировать нажатие из источника:",
   "SourceInputMode_Grab": "Захват",
   "SourceInputMode_CapsenseEnableThreshold": "Порог активации ёмкостного датчика:",
