--- a/resources/webinterface/dashboard/localization/dashboard_thai.json
+++ b/resources/webinterface/dashboard/localization/dashboard_thai.json
@@ -1,46 +1,48 @@
 {
-  "UI_Unknown": "Unknown",
-  "Now_Starting": "Next Up",
-  "Now_Starting_HomeApp": "Going Home To",
-  "Now_Playing": "Now Playing",
-  "Now_Playing_HomeApp": "Home",
-  "Now_Quitting": "Now Exiting",
-  "Now_Waiting": "Waiting...",
-  "BackToApp": "Back to App",
-  "Toggle_Room_View": "Toggle Room View",
-  "GoHome": "Go Home",
-  "QuitApp": "Quit App",
-  "DashboardPower_Header": "System",
-  "BindingCallout_Header": "Show Controls",
+  "UI_Unknown": "ไม่รู้จัก",
+  "Now_Starting": "ถัดไป",
+  "Now_Starting_HomeApp": "กำลังกลับไปยังหน้าหลัก",
+  "Now_Playing": "กำลังเล่นในขณะนี้",
+  "Now_Playing_HomeApp": "หน้าหลัก",
+  "Now_Quitting": "กำลังออกในขณะนี้",
+  "Now_Waiting": "กำลังรอ...",
+  "BackToApp": "ย้อนกลับไปแอป",
+  "Toggle_Room_View": "สลับมุมมองห้อง",
+  "GoHome": "ไปยังหน้าหลัก",
+  "QuitApp": "ออกจากแอป",
+  "DashboardPower_Header": "ระบบ",
+  "BindingCallout_Header": "แสดงการควบคุม",
   "MutedLabel": "ปิดเสียง",
-  "SteamVR_Home": "SteamVR Home",
-  "Exit_SteamVR_Home": "Exit SteamVR Home",
-  "Exit_Game": "Exit Game",
-  "Menu": "Menu",
-  "Desktops": "Desktops",
-  "Volume": "Volume",
-  "X_More_Overlays": "%1$s More Overlays",
-  "Store": "Store",
-  "BrowseAllGames": "Browse All Games",
-  "BrowseAll": "Browse All",
-  "StoreSection_TopSingleplayer": "Top Singleplayer",
-  "StoreSection_TopMultiplayer": "Top Multiplayer",
-  "StoreSection_TopFree": "Top Free",
-  "Library": "Library",
-  "RecentlyPlayed": "Recently Played",
-  "Return_To_Game": "Return to Game",
-  "Return_To_Home": "Return to Home",
-  "Controller_Bindings": "Controller Bindings",
-  "App_Video_Settings": "Video Settings",
-  "Desktop": "Desktop",
-  "Desktop_X": "Desktop %1$s",
-  "ShowKeyboardLabel": "Keyboard",
-  "ShowKeyboardTooltip": "Show Keyboard",
-  "Size": "Size",
-  "Mute": "Mute",
-  "Unmute": "Unmute",
-  "WelcomeHeader": "No Games?",
-  "WelcomeMessage": "Building a VR library that comes with you as your hardware changes has never been easier.",
-  "WelcomeBrowseStore": "Browse the Store",
-  "WelcomeInstall": "Install Games"
+  "SteamVR_Home": "หน้าหลัก SteamVR",
+  "Exit_SteamVR_Home": "ออกจากหน้าหลัก SteamVR",
+  "Exit_Game": "ออกจากเกม",
+  "Menu": "เมนู",
+  "Desktops": "เดสก์ทอป",
+  "Volume": "ระดับเสียง",
+  "X_More_Overlays": "%1$s โอเวอร์เลย์เพิ่มเติม",
+  "Store": "ร้านค้า",
+  "BrowseAllGames": "เปิดหาเกมทั้งหมด",
+  "BrowseAll": "เปิดหาทั้งหมด",
+  "StoreSection_TopSingleplayer": "ผู้เล่นคนเดียวยอดนิยม",
+  "StoreSection_TopMultiplayer": "ผู้เล่นหลายคนยอดนิยม",
+  "StoreSection_TopFree": "เกมฟรียอดนิยม",
+  "Library": "คลัง",
+  "RecentlyPlayed": "เล่นล่าสุด",
+  "Return_To_Game": "กลับสู่เกม",
+  "Return_To_Home": "กลับสู่หน้าหลัก",
+  "Controller_Bindings": "การกำหนดปุ่มคอนโทรลเลอร์",
+  "App_Video_Settings": "การตั้งค่าวิดีโอ",
+  "Desktop": "เดสก์ทอป",
+  "Desktop_X": "เดสก์ทอป %1$s",
+  "ShowKeyboardLabel": "คีย์บอร์ด",
+  "ShowKeyboardTooltip": "แสดงคีย์บอร์ด",
+  "HideKeyboardTooltip": "ซ่อนคีย์บอร์ด",
+  "Size": "ขนาด",
+  "Mute": "ปิดเสียง",
+  "Unmute": "เลิกปิดเสียง",
+  "WelcomeHeader": "ไม่มีเกม?",
+  "WelcomeMessage": "การสร้างคลัง VR ที่มาพร้อมกับการเปลี่ยนแปลงฮาร์ดแวร์ของคุณที่ไม่เคยง่ายดายขนาดนี้มาก่อน",
+  "WelcomeBrowseStore": "เปิดหาร้านค้า",
+  "WelcomeInstall": "ติดตั้งเกม",
+  "Play": "เล่น"
 }
