--- a/resources/webinterface/dashboard/localization/vrmonitor_thai.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_thai.json
@@ -13,9 +13,9 @@
 	"Settings_Controller_CustomBinding": "กำหนดเอง",
 	"Settings_ThumbstickDeadzone_Text": "Deadzone ของทัมสติก",
 	"Settings_ThumbstickDeadzone_Desc": "ปรับเดดโซนของทัมสติกทั้งหมด",
-	"Settings_DominantHand": "Dominant Hand",
-	"Settings_DominantHand_Left": "Left",
-	"Settings_DominantHand_Right": "Right",
+	"Settings_DominantHand": "มือที่ถนัด",
+	"Settings_DominantHand_Left": "ซ้าย",
+	"Settings_DominantHand_Right": "ขวา",
 	"Settings_Loading_CurrentBinding": "กำลังโหลดการกำหนดปุ่มปัจจุบัน...",
 	"Settings_NeedSteamTo_ViewAndEditBindings": "เริ่ม Steam เพื่อดูและแก้ไขการกำหนดปุ่ม",
 	"VRMonitor_Overview_SystemStatus_Title": "สถานะของระบบ",
@@ -51,12 +51,13 @@
 	"Settings_Audio_Headset": "เครื่องสวมศีรษะ",
 	"Settings_Audio_Manual": "ดำเนินการเอง",
 	"Settings_Audio_Mirroring_Label": "การส่งเสียงเสมือน",
-	"Settings_Audio_Default": "System Default",
+	"Settings_Audio_Mirroring_Independent_Volume_Label": "การส่งเสียงเสมือนใช้ตัวเลื่อนระดับเสียงที่เป็นอิสระ (เบต้า)",
+	"Settings_Audio_Default": "ค่าเริ่มต้นระบบ",
 	"Settings_Audio_Current_Setting_Unknown": "(อุปกรณ์ที่เลือกไว้ไม่พร้อมใช้งานในขณะนี้)",
 	"Settings_Audio_HDMIGain": "การลดทอนค่า Gain บนสัญญาณเสียง HDMI ของ Vive",
 	"Settings_SectionTitle_Advanced": "ขั้นสูง",
 	"Settings_SectionTitle_Developer": "ผู้พัฒนา",
-	"Settings_SectionTitle_Dashboard": "Dashboard",
+	"Settings_SectionTitle_Dashboard": "กระดานรวม",
 	"Settings_SectionTitle_General": "ทั่วไป",
 	"Settings_SectionTitle_Applications": "แอปพลิเคชัน",
 	"Settings_SectionTitle_Audio": "เสียง",
@@ -92,16 +93,16 @@
 	"Settings_Advanced_Paths_Header": "ตำแหน่ง",
 	"Settings_Advanced_Reset_Header": "รีเซ็ต",
 	"Settings_Advanced_Status_Header": "ตรวจสอบสถานะ",
-	"Settings_ShowSettingsInDashboard": "Show Settings Tab",
-	"Settings_ShowPowerMenu": "Show Power Options",
-	"Settings_AllowAppQuitting": "Allow App Quitting From Dashboard",
-	"Settings_ShowDesktopViews": "Show Desktop Tabs",
+	"Settings_ShowSettingsInDashboard": "แสดงแท็บการตั้งค่า",
+	"Settings_ShowPowerMenu": "แสดงตัวเลือกพลังงาน",
+	"Settings_AllowAppQuitting": "อนุญาตให้แอปออกจากกระดานรวมได้",
+	"Settings_ShowDesktopViews": "แสดงแท็บเดสก์ทอป",
 	"Settings_CheckForSteam": "ตรวจหา Steam",
-	"Settings_DebugInputBindings": "เปิดการใช้งานตัวเลือกดีบักในอินเตอร์เฟสผู้ใช้สำหรับการกำหนดปุ่มอุปกรณ์ควบคุม",
-	"Advanced_GlobalActionSetPriority": "Enable global input from overlays (Experimental)",
+	"Settings_DebugInputBindings": "เปิดการใช้งานตัวเลือกดีบักในอินเตอร์เฟซผู้ใช้สำหรับการกำหนดปุ่มอุปกรณ์ควบคุม",
+	"Advanced_GlobalActionSetPriority": "เปิดการใช้งานอุปกรณ์ควบคุมหลักจากโอเวอร์เลย์ (รุ่นทดลอง)",
 	"Settings_FadeToGrid": "ทำให้ตารางจางลงเมื่อแอปแฮงก์",
-	"Settings_EnableDashboard": "VR Dashboard on System Button",
-	"Settings_EnableDashboardDesc": "Allow the VR Dashboard to be summoned in response to a system button press.",
+	"Settings_EnableDashboard": "กระดานรวม VR บนปุ่มระบบ",
+	"Settings_EnableDashboardDesc": "อนุญาตให้กระดานรวม VR ถูกเรียกขึ้นมา เมื่อปุ่มระบบถูกกด",
 	"Settings_HomeAppCheck": "หน้าหลัก SteamVR",
 	"Settings_HomeAppDesc": "สนุกสนานกับสภาพแวดล้อมแบบความจริงเสมือน คุณสมบัติทางสังคม และอื่น ๆ อีกมากมาย",
 	"Settings_LargeSpace": "พื้นที่ขนาดใหญ่",
@@ -109,6 +110,9 @@
 	"Settings_LockedModeDesc": "อนุญาตให้เรนเดอร์ไปยังเครื่องสวมศีรษะ ในขณะที่คอมพิวเตอร์ถูกล็อคอยู่",
 	"Settings_PauseOnStandby": "หยุด VR เมื่อเครื่องสวมศีรษะนิ่งเฉย",
 	"Settings_PauseOnLocked": "หยุด VR เมื่อคอมพิวเตอร์ถูกล็อค",
+	"Settings_OverlayRenderQuality": "คุณภาพการเรนเดอร์โอเวอร์เลย์",
+	"Settings_High": "สูง",
+	"Settings_Low": "ต่ำ",
 	"Settings_MediumSpace": "พื้นที่ขนาดปานกลาง",
 	"Settings_NightModeCheck": "โหมดกลางคืน",
 	"Settings_NightModeDesc": "ลดแสงในเครื่องสวมศีรษะจนถึง 05:00 น. (หรือจนรีสตาร์ท SteamVR)",
@@ -173,7 +177,7 @@
 	"Settings_PerApplication_Reprojection_Header": "รีโปรเจกชัน",
 	"Settings_PerApplication_Reprojection_Checkbox": "ใช้โหมดรีโปรเจกชันดั้งเดิม",
 	"Settings_PerApplication_Reprojection_Description": "การทำเครื่องหมายที่ตัวเลือกนี้จะปิดการใช้งานรีโปรเจกชันแบบอะซิงโครนัสสำหรับเกมนี้",
-	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Refresh Rate Override",
+	"Settings_PerApplication_RefreshRateOverride_Checkbox": "เขียนทับอัตรารีเฟรช",
 	"Settings_Perapplication_RefreshRateOverride_Description": "การทำเครื่องหมายที่ตัวเลือกนี้จะทำให้ระบุอัตรารีเฟรชแตกต่างจากการตั้งค่าหลักสำหรับแอปพลิเคชันนี้ได้",
 	"Settings_MimeTypes_Pancake_Header": "เลือกแอปพลิเคชันเพื่อเปิดแอปพลิเคชันแบบ 2D ใน",
 	"Settings_Camera_EnableCamera": "เปิดการใช้งานกล้อง",
@@ -212,7 +216,7 @@
 	"Settings_General_Cancel": "ยกเลิก",
 	"Settings_General_Confirm": "ยืนยัน",
 	"Settings_General_Close": "ปิด",
-	"Settings_General_CalibrateThumbstick": "Calibrate Thumbstick",
+	"Settings_General_CalibrateThumbstick": "ปรับเทียบทัมสติก",
 	"Settings_General_CalibrateThumbstick_ConnectAController": "เชื่อมต่อคอนโทรลเลอร์กับทัมสติก",
 	"Settings_General_NotEnoughSamples": "กรุณากดทัมสติกขึ้นอีกอย่างน้อย %1$s ครั้งเพื่อให้การปรับเทียบเสร็จสมบูรณ์",
 	"Settings_General_InviteMoreSamples": "มุมที่คำนวณไว้เท่ากับ %1$s° กดขึ้นไปเรื่อย ๆ เพื่อปรับแต่งค่านั้น หรือกด ยืนยัน เพื่อยอมรับการปรับเทียบนี้",
@@ -223,13 +227,13 @@
 	"Settings_Dashboard_ShowProgressIndicator": "ตัวบ่งชี้ความคืบหน้าของการกดยาว:",
 	"Settings_Dashboard_Position": "ตำแหน่งกระดานรวม",
 	"Settings_Classic": "คลาสสิก",
-	"Settings_Near": "Near",
-	"Settings_Middle": "Middle",
+	"Settings_Near": "ใกล้",
+	"Settings_Middle": "กลาง",
 	"Settings_DesktopScale": "ขนาดเดสก์ทอป",
 	"Settings_DashboardScale": "ขนาดกระดานรวม",
-	"Settings_DesktopDarkMode": "Desktop Dark Mode",
-	"Settings_ToggleDarkMode": "Toggle Dark Mode",
-	"Settings_Dark": "Dark",
+	"Settings_DesktopDarkMode": "เดสก์ทอปโหมดมืด",
+	"Settings_ToggleDarkMode": "สลับโหมดมืด",
+	"Settings_Dark": "มืด",
 	"SettingsTime_5s": "5 วินาที",
 	"SettingsTime_30s": "30 วินาที",
 	"SettingsTime_1m": "1 นาที",
@@ -264,7 +268,7 @@
 	"CameraTest_CameraFailed": "การติดต่อกล้องล้มเหลว",
 	"CameraTest_TrackingFailed": "การติดตามล้มเหลวเมื่อเปิดการใช้งานกล้อง",
 	"CameraTest_Success": "การทดสอบกล้องผ่านเกณฑ์",
-	"CameraTest": "Camera Test",
+	"CameraTest": "ทดสอบมุมกล้อง",
 	"CameraTestStatus_Evaluating": "กำลังตรวจสอบ",
 	"CameraTestStatus_Success": "สำเร็จ",
 	"CameraTestStatus_Failure": "ล้มเหลว",
@@ -275,8 +279,8 @@
 	"CameraRoomViewMode_VideoOpaque": "มองผ่านแบบทึบแสง",
 	"Settings_MustRestart_Description": "ต้องรีสตาร์ท SteamVR เพื่อให้การเปลี่ยนแปลงส่งผล",
 	"Settings_MustRestart_RestartSteamVR_Button": "รีสตาร์ท SteamVR",
-	"Settings_MustQuitApp_Description": "Please quit the current game for changes to take effect.",
-	"Settings_MustQuitApp_QuitCurrentGame_Button": "Quit Game",
+	"Settings_MustQuitApp_Description": "กรุณาออกเกมในปัจจุบันเพื่อให้การเปลี่ยนแปลงค่ามีผล",
+	"Settings_MustQuitApp_QuitCurrentGame_Button": "ออกเกม",
 	"Settings_NotSupported": "ไม่รองรับ",
 	"Settings_AdvancedSettings": "การตั้งค่าขั้นสูง",
 	"Settings_Show": "แสดง",
