--- a/resources/webinterface/dashboard/localization/vrmonitor_vietnamese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_vietnamese.json
@@ -1,7 +1,7 @@
 {
 	"language": "vietnamese",
 	"VRMonitor_Nav_Overview": "Tổng quan",
-	"VRMonitor_Nav_Settings": "Cài đặt",
+	"VRMonitor_Nav_Settings": "Thiết lập",
 	"VRMonitor_Nav_Help": "Trợ giúp",
 	"VRMonitor_Nav_Developer": "Nhà phát triển",
 	"Settings_ControllerSettings": "Thiết lập tay cầm",
@@ -13,9 +13,9 @@
 	"Settings_Controller_CustomBinding": "Tùy biến",
 	"Settings_ThumbstickDeadzone_Text": "Vùng chết thumbstick",
 	"Settings_ThumbstickDeadzone_Desc": "Điều chỉnh vùng chết cho tất cả thumbstick.",
-	"Settings_DominantHand": "Dominant Hand",
-	"Settings_DominantHand_Left": "Left",
-	"Settings_DominantHand_Right": "Right",
+	"Settings_DominantHand": "Tay thuận",
+	"Settings_DominantHand_Left": "Trái",
+	"Settings_DominantHand_Right": "Phải",
 	"Settings_Loading_CurrentBinding": "Đang tải cấu hình nút hiện tại...",
 	"Settings_NeedSteamTo_ViewAndEditBindings": "Khởi động Steam để xem và sửa cấu hình nút.",
 	"VRMonitor_Overview_SystemStatus_Title": "Trạng thái hệ thống",
@@ -51,12 +51,13 @@
 	"Settings_Audio_Headset": "Mũ chụp",
 	"Settings_Audio_Manual": "Thủ công",
 	"Settings_Audio_Mirroring_Label": "Lặp lại âm thanh",
-	"Settings_Audio_Default": "System Default",
+	"Settings_Audio_Mirroring_Independent_Volume_Label": "Chức năng lập âm sử dụng thanh trượt âm lượng độc lập (Beta)",
+	"Settings_Audio_Default": "Mặc định cho hệ thống",
 	"Settings_Audio_Current_Setting_Unknown": "(Thiết bị được chọn hiện tại không có)",
 	"Settings_Audio_HDMIGain": "Giảm khuếch đại trên VIVE HDMI Audio",
 	"Settings_SectionTitle_Advanced": "Nâng cao",
 	"Settings_SectionTitle_Developer": "Nhà phát triển",
-	"Settings_SectionTitle_Dashboard": "Dashboard",
+	"Settings_SectionTitle_Dashboard": "Trang tổng quan",
 	"Settings_SectionTitle_General": "Tổng quát",
 	"Settings_SectionTitle_Applications": "Ứng dụng",
 	"Settings_SectionTitle_Audio": "Âm thanh",
@@ -64,7 +65,7 @@
 	"Settings_SectionTitle_Camera": "Camera",
 	"Settings_SectionTitle_Bluetooth": "Bluetooth",
 	"Settings_SectionTitle_Power": "Điện năng",
-	"Settings_SectionTitle_StartupShutdown": "Khởi động / Tắt máy",
+	"Settings_SectionTitle_StartupShutdown": "Khởi động / Tắt",
 	"Settings_SectionTitle_Home": "Trang chủ",
 	"Settings_SectionTitle_PlayArea": "Không gian chơi",
 	"Settings_SectionTitle_BaseStation": "Trạm theo dõi",
@@ -92,23 +93,26 @@
 	"Settings_Advanced_Paths_Header": "Đường dẫn",
 	"Settings_Advanced_Reset_Header": "Đặt lại",
 	"Settings_Advanced_Status_Header": "Kiểm tra trạng thái",
-	"Settings_ShowSettingsInDashboard": "Show Settings Tab",
-	"Settings_ShowPowerMenu": "Show Power Options",
-	"Settings_AllowAppQuitting": "Allow App Quitting From Dashboard",
-	"Settings_ShowDesktopViews": "Show Desktop Tabs",
+	"Settings_ShowSettingsInDashboard": "Hiển thẻ thiết lập",
+	"Settings_ShowPowerMenu": "Hiện tùy chọn điện năng",
+	"Settings_AllowAppQuitting": "Cho phép thoát ứng dụng từ trang tổng quan",
+	"Settings_ShowDesktopViews": "Hiện thẻ desktop",
 	"Settings_CheckForSteam": "Kiểm tra Steam",
-	"Settings_DebugInputBindings": "Bật tùy chọn gỡ lỗi trong giao diện gán phím tương tác",
-	"Advanced_GlobalActionSetPriority": "Enable global input from overlays (Experimental)",
+	"Settings_DebugInputBindings": "Bật tùy chọn debug trong giao diện gán phím tương tác",
+	"Advanced_GlobalActionSetPriority": "Cho phép tương tác chung từ lớp phủ (Thử nghiệm)",
 	"Settings_FadeToGrid": "Ẩn về lưới khi ứng dụng treo",
-	"Settings_EnableDashboard": "VR Dashboard on System Button",
-	"Settings_EnableDashboardDesc": "Allow the VR Dashboard to be summoned in response to a system button press.",
-	"Settings_HomeAppCheck": "Trang chủ SteamVR",
+	"Settings_EnableDashboard": "Trang tổng quan VR trên nút system",
+	"Settings_EnableDashboardDesc": "Cho phép Trang tổng quan VR xuất hiện khi ấn nút system.",
+	"Settings_HomeAppCheck": "SteamVR Home",
 	"Settings_HomeAppDesc": "Tận hưởng môi trường ảo, tính năng xã hội, và nhiều thứ khác.",
 	"Settings_LargeSpace": "Không gian lớn",
 	"Settings_LockedModeCheck": "Chế độ khóa",
 	"Settings_LockedModeDesc": "Cho phép dựng khung hình tới mũ chụp khi máy tính đang khóa.",
 	"Settings_PauseOnStandby": "Ngừng VR khi mũ chụp ở trạng thái nhàn rỗi (idle)",
 	"Settings_PauseOnLocked": "Tạm dừng VR khi máy tính bị khóa",
+	"Settings_OverlayRenderQuality": "Chất lượng dựng lớp phủ",
+	"Settings_High": "Cao",
+	"Settings_Low": "Thấp",
 	"Settings_MediumSpace": "Không gian vừa",
 	"Settings_NightModeCheck": "Chế độ ban đêm",
 	"Settings_NightModeDesc": "Giảm độ sáng mũ chụp đến 5 giờ sáng (hoặc đến khi khởi động lại SteamVR).",
@@ -146,7 +150,7 @@
 	"Settings_Advanced_MotionSmoothing_Disabled_Win7": "Làm mượt chuyển động không được hỗ trợ trong các phiên bản Windows cũ.",
 	"Settings_Advanced_Supersampling_Auto": "Tự động",
 	"Settings_Advanced_Supersampling_Custom": "Tùy biến",
-	"Settings_Advanced_Supersampling_Header": "Độ phân giải ảnh kết xuất",
+	"Settings_Advanced_Supersampling_Header": "Độ phân giải dựng hình",
 	"Settings_Advanced_Supersampling_Warning": "Thiết lập dưới đây ghi đè thiết lập tự động hóa và ảnh hưởng tới mọi ứng dụng. Để thay đổi độ phân giải cho một ứng dụng cụ thể, hãy đến mục thiết lập ứng dụng.",
 	"Settings_Advanced_Supersampling_WidthByHeight": "%1$s × %2$s",
 	"Settings_Advanced_SupersamplingManualOverride": "Bật điều chỉnh độ phân giải",
@@ -173,7 +177,7 @@
 	"Settings_PerApplication_Reprojection_Header": "Chiếu lại",
 	"Settings_PerApplication_Reprojection_Checkbox": "Dùng chế độ chiếu lại truyền thống",
 	"Settings_PerApplication_Reprojection_Description": "Lựa chọn này sẽ tắt tái chiếu không đồng bộ cho sản phẩm.",
-	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Refresh Rate Override",
+	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Ghi đè tốc độ cập nhật",
 	"Settings_Perapplication_RefreshRateOverride_Description": "Lựa chọn này cho phép xác định tốc độ làm mới khung hình khác với thiết lập chung cho ứng dụng này.",
 	"Settings_MimeTypes_Pancake_Header": "Chọn một ứng dụng để chạy cùng với các ứng dụng 2D",
 	"Settings_Camera_EnableCamera": "Bật camera",
@@ -208,11 +212,11 @@
 	"Settings_General_Notifications_Label": "Thông báo",
 	"Settings_General_Notifications_Text": "Cho phép thông báo khi dùng VR",
 	"Settings_General_ShowBindingUI": "Sửa gán nút tay cầm",
-	"Settings_General_ShowTrackerUI": "Quản lý máy theo dõi Vive",
+	"Settings_General_ShowTrackerUI": "Quản lý Vive Tracker",
 	"Settings_General_Cancel": "Hủy",
 	"Settings_General_Confirm": "Xác nhận",
 	"Settings_General_Close": "Đóng",
-	"Settings_General_CalibrateThumbstick": "Calibrate Thumbstick",
+	"Settings_General_CalibrateThumbstick": "Căn chỉnh thumbstick",
 	"Settings_General_CalibrateThumbstick_ConnectAController": "Kết nối tay cầm với thumbstick.",
 	"Settings_General_NotEnoughSamples": "Vui lòng kéo thumbstick lên ít nhất %1$s lần nữa để hoàn thiện căn chỉnh.",
 	"Settings_General_InviteMoreSamples": "Góc đã tính toán: %1$s°. Tiếp tục kéo lên để tinh chỉnh giá trị đó hoặc nhấn nút Xác nhận để chấp nhận giá trị căn chỉnh này.",
@@ -220,16 +224,16 @@
 	"Settings_General_RightThumbstickAngle": "Góc thumbstick phải: %1$s°",
 	"Settings_General_LeftThumbstickAngle_NoValue": "Góc thumbstick trái",
 	"Settings_General_RightThumbstickAngle_NoValue": "Góc thumbstick phải",
-	"Settings_Dashboard_ShowProgressIndicator": "Thanh quá trình ấn giữ",
+	"Settings_Dashboard_ShowProgressIndicator": "Thanh quá trình giữ nhấn",
 	"Settings_Dashboard_Position": "Vị trí trang tổng quan",
 	"Settings_Classic": "Cổ điển",
-	"Settings_Near": "Near",
-	"Settings_Middle": "Middle",
-	"Settings_DesktopScale": "Tỷ lệ màn hình máy tính",
+	"Settings_Near": "Gần",
+	"Settings_Middle": "Giữa",
+	"Settings_DesktopScale": "Tỷ lệ desktop",
 	"Settings_DashboardScale": "Tỷ lệ trang tổng quan",
-	"Settings_DesktopDarkMode": "Desktop Dark Mode",
-	"Settings_ToggleDarkMode": "Toggle Dark Mode",
-	"Settings_Dark": "Dark",
+	"Settings_DesktopDarkMode": "Desktop chế độ tối",
+	"Settings_ToggleDarkMode": "Bật tắt chế độ tối",
+	"Settings_Dark": "Tối",
 	"SettingsTime_5s": "5 giây",
 	"SettingsTime_30s": "30 giây",
 	"SettingsTime_1m": "1 phút",
@@ -264,7 +268,7 @@
 	"CameraTest_CameraFailed": "Giao tiếp với camera không thành công",
 	"CameraTest_TrackingFailed": "Theo dõi không thành công với camera đã bật",
 	"CameraTest_Success": "Vượt qua bài kiểm tra camera",
-	"CameraTest": "Camera Test",
+	"CameraTest": "Bài kiểm tra camera",
 	"CameraTestStatus_Evaluating": "Đang kiểm tra",
 	"CameraTestStatus_Success": "Thành công",
 	"CameraTestStatus_Failure": "Thất bại",
@@ -275,17 +279,17 @@
 	"CameraRoomViewMode_VideoOpaque": "Cản quang có thể xuyên qua",
 	"Settings_MustRestart_Description": "Phải khởi động lại SteamVR để một số thay đổi có hiệu lực.",
 	"Settings_MustRestart_RestartSteamVR_Button": "Khởi động lại SteamVR",
-	"Settings_MustQuitApp_Description": "Please quit the current game for changes to take effect.",
-	"Settings_MustQuitApp_QuitCurrentGame_Button": "Quit Game",
+	"Settings_MustQuitApp_Description": "Xin thoát trò đang chơi để các thay đổi được thực hiện.",
+	"Settings_MustQuitApp_QuitCurrentGame_Button": "Thoát trò chơi",
 	"Settings_NotSupported": "Không được hỗ trợ",
 	"Settings_AdvancedSettings": "Thiết lập nâng cao",
 	"Settings_Show": "Hiện",
 	"Settings_Hide": "Ẩn",
 	"Settings_ViveTracker": "Vive Tracker",
 	"Settings_ViveTrackers": "Vive Tracker",
-	"Settings_ViveTracker_Role": "Vai trò của tracker",
+	"Settings_ViveTracker_Role": "Vai trò của Tracker",
 	"Settings_ViveTracker_Hand": "Tay",
-	"Settings_ViveTracker_Identify_NotConnected": "Vive tracker chưa kết nối.",
+	"Settings_ViveTracker_Identify_NotConnected": "Vive Tracker chưa kết nối.",
 	"Settings_ViveTracker_Identify_NotIdentifiable": "Không thể nhận diện Vive Tracker.",
 	"Settings_ViveTracker_Connected": "Đã kết nối",
 	"Settings_ViveTracker_Disconnected": "Đã ngắt kết nối",
@@ -303,7 +307,7 @@
 	"Settings_ActiveBinding": "Cấu hình nút đang hoạt động",
 	"Settings_ShowThumbstickSettings": "Thay đổi thiết lập thumbstick",
 	"Settings_ThumbstickSettings": "Thiết lập thumbstick",
-	"Settings_Number_Selected": "%1$s đã chọn",
+	"Settings_Number_Selected": "Đã chọn %1$s",
 	"TestControllerTitle": "Đang kiểm tra tay cầm %1$s",
 	"TestController_NoController": "Bật một tay cầm để kiểm tra."
 }
