--- a/resources/webinterface/dashboard/localization/webhelper_thai.json
+++ b/resources/webinterface/dashboard/localization/webhelper_thai.json
@@ -68,6 +68,6 @@
 	"OriginString_Source": "%3$s",
 	"OriginString_Controller": "%2$s",
 	"KeyboardDone": "เสร็จสมบูรณ์",
-	"Resetting_Seated_Origin": "Resetting Seated Origin",
+	"Resetting_Seated_Origin": "รีเซ็ตการนั่งดั้งเดิม",
 	"DO_NOT_TRANSLATE": "IgnoreMe"
 }
